--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-28 11:46:41
+lastsearch = 2024-07-28 15:56:38
 
 [www.reddit.com]
 match = -82.6%%
@@ -268,8 +268,8 @@ url = https://cryptonews.com/news/south-korean-police-arrest-70-in-raid-on-crypt
 
 [www.koreanwar2.org]
 match = -30.4%%
-title = COMMAND DIARY - (VOL I) - JUNE 1953
-url = http://www.koreanwar2.org/kwp2/usmc/003/M003_CD5_COMMAND_DIARY_JUNE_1953_VOLUME_1.pdf
+title = NOVEMBER 1951 - 5TH MARINE REGIMENT
+url = https://www.koreanwar2.org/kwp2/usmc/080/M080_CD22_1951_11_2193.pdf
 
 [variety.com]
 match = -100.0%%
@@ -510,4 +510,19 @@ url = https://www.jstor.org/stable/10.5699/slaveasteurorev2.89.1.0076
 match = 0.0%%
 title = SHARPENING THE COMBAT EDGE
 url = https://history.army.mil/html/books/090/90-20/CMH_Pub_90-20.pdf
+
+[sino-platonic.org]
+match = -26.1%%
+title = A Germanic-Tai Linguistic Puzzle
+url = https://sino-platonic.org/complete/spp064_germanic_tai_linguistics.pdf
+
+[horizon.documentation.ird.fr]
+match = -26.1%%
+title = Coral reef Ascidians of New Caledonia
+url = https://horizon.documentation.ird.fr/exl-doc/pleins_textes/divers19-04/34347.pdf
+
+[files.eric.ed.gov]
+match = -162.5%%
+title = Catalogs
+url = https://files.eric.ed.gov/fulltext/ED112652.pdf
 
