--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-07-28 06:33:35
+lastsearch = 2024-07-28 15:51:49
 
 [shopee.vn]
 match = 7.4%%
@@ -22,9 +22,9 @@ title = Chăn Lông tuyết KQ 3 Lớp - Chăn 5kg hàng cao cấp chất ...
 url = https://www.lazada.vn/products/chan-long-tuyet-kq-3-lop-chan-5kg-hang-cao-cap-chat-luong-caocuc-ky-am-cho-ngay-ret-dai-han-i2044231389.html?srsltid=AfmBOor2LAfXhViNVbLLyVwfjHR6x9yNycXsxDwuI6X8xNzgPSM0OxuQ
 
 [tiki.vn]
-match = 11.1%%
-title = Chăn nhung tuyết hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn nhung tuyết
+match = -3.7%%
+title = Chăn tuyết nhung hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn tuyết nhung
 
 [betuti.vn]
 match = 48.1%%
@@ -52,9 +52,9 @@ title = Chăn Thái Lan Toto TT300
 url = https://phugiatrading.com/chan-thai-lan-toto-tt301/
 
 [www.youtube.com]
-match = -70.4%%
-title = [ENG SUB] Cho thứ này vào pha bột BÁNH XÈO bánh giòn rất ...
-url = https://www.youtube.com/watch?v=hxI-i5jAeB8
+match = -59.3%%
+title = Chuyện Chưa Kể #71|3 lần vợ phủ nhận ngoại tình, chồng ...
+url = https://www.youtube.com/watch?v=4T4jetzztH8
 
 [lasantevn.com]
 match = -11.1%%
