--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-28 14:20:37
+lastsearch = 2024-07-28 15:46:39
 
 [www.facebook.com]
 match = -141.2%%
@@ -14,12 +14,12 @@ url = https://www.facebook.com/newageparents/posts/mom-asked-have-anyone-heard-o
 [www.teadrunk.com]
 match = -100.0%%
 title = Buy Chan Cha Red Tea | Chinese Loose Leaf Tea
-url = https://www.teadrunk.com/products/red-tea-chan-cha?srsltid=AfmBOopANjm2qHzxehGciiGoLPT9vCBBgKPwIP0aJZhkDjvtKw7xJwSE
+url = https://www.teadrunk.com/products/red-tea-chan-cha
 
 [www.diepxuan.com]
 match = 5.9%%
 title = Chăn Mao Tân 4kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-mao-tan-4kg.html?srsltid=AfmBOop5Jbe9J_1gs0JymnfLEv9ZKzcWJ_W_9SOZxyBW2MVHc4XeEmzv
+url = https://www.diepxuan.com/chan-mao-tan-4kg.html
 
 [m.facebook.com]
 match = -176.5%%
