--- a/images/chan-hoi-to-ong/config.ini
+++ b/images/chan-hoi-to-ong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-to-ong.html
 lastopen = 2024-06-09 23:18:52
 
 [search]
-lastsearch = 2024-07-28 14:27:29
+lastsearch = 2024-07-28 15:56:17
 
 [www.instagram.com]
 match = -173.3%%
@@ -47,9 +47,9 @@ title = CHAN Hoi-man
 url = https://www.soc.cuhk.edu.hk/profile/chan-hoi-man/
 
 [hk.linkedin.com]
-match = -73.3%%
-title = Hoi Lam Chan - Hong Kong, Hong Kong SAR
-url = https://hk.linkedin.com/in/hoi-lam-chan-8b5281261
+match = -186.7%%
+title = Chor-Hoi Chan - Harbin Institute of Technology, Shenzhen
+url = https://hk.linkedin.com/in/chor-hoi-chan-69a46b104
 
 [www.polyu.edu.hk]
 match = -160.0%%
