--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-28 15:19:03
+lastsearch = 2024-07-28 15:45:36
 
 [www.instagram.com]
-match = -223.1%%
-title = Yuki Hoi (@hoisoki) • Instagram photos and videos
-url = https://www.instagram.com/hoisoki/?hl=en
+match = -107.7%%
+title = Hoi Chan (@hoichandraws) - Instagram
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.linkedin.com]
-match = -192.3%%
-title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
-url = https://www.linkedin.com/in/hoi-ki-chan-519219147
+match = 23.1%%
+title = Hoi Chan Studio
+url = https://www.linkedin.com/in/yiu-hoi-chan
 
 [www.creativeboom.com]
 match = -307.7%%
@@ -117,8 +117,8 @@ title = Team
 url = https://www.5plusdesign.com/team
 
 [www.scmp.com]
-match = -300.0%%
-title = Meet the HKU graduate making vegan treats to promote a ...
+match = -223.1%%
+title = Meet the HKU graduate making vegan treats to ...
 url = https://www.scmp.com/yp/discover/news/hong-kong/article/3057691/meet-hku-graduate-making-vegan-treats-promote-plant
 
 [mutualpublishing.com]
