--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-07-28 14:24:22
+lastsearch = 2024-07-28 15:48:21
 
 [www.youtube.com]
-match = -147.4%%
-title = 3 Yếu tố giúp cây hoa Mộc hương phát triển nhanh cây khoẻ ...
-url = https://www.youtube.com/watch?v=ASsdVo0WBew
+match = -126.3%%
+title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
+url = https://www.youtube.com/watch?v=KAnEyj4H3PY
 
 [trangtrisanvuon.vn]
 match = -147.4%%
@@ -292,9 +292,9 @@ title = Fuhu - Mạng xã hội dành cho nhà sáng tạo
 url = https://fuhuq.net/en
 
 [suckhoedoisong.vn]
-match = -152.6%%
-title = Đã ghi nhận hơn 41.900 ca sốt xuất huyết, số mắc có thể ...
-url = https://suckhoedoisong.vn/da-ghi-nhan-hon-41900-ca-sot-xuat-huyet-so-mac-co-the-tiep-tuc-tang-16924072800321477.htm
+match = -157.9%%
+title = Báo động mỗi ngày có tới 40-50 ca nhập viện vì đột quy ...
+url = https://suckhoedoisong.vn/bao-dong-moi-ngay-co-toi-40-50-ca-nhap-vien-vi-dot-quy-benh-co-xu-huong-ngay-cang-tre-hoa-169240724134606957.htm
 
 [thegioihoa.net]
 match = -89.5%%
@@ -312,9 +312,9 @@ title = Hoa sen cạn có kỹ thuật trồng cây không khó
 url = http://ttkhcn.baria-vungtau.gov.vn/tttv/Question/DetailQuestion/334?page=16
 
 [yte.nghean.gov.vn]
-match = -168.4%%
-title = Xu hướng sử dụng thực phẩm chế biến sẵn gia tăng, chuyên ...
-url = https://yte.nghean.gov.vn/tin-chuyen-nganh/xu-huong-su-dung-thuc-pham-che-bien-san-gia-tang-chuyen-gia-dinh-duong-noi-gi-683206
+match = -110.5%%
+title = 9 cách phòng suy tĩnh mạch chân cần biết - Sở Y tế
+url = https://yte.nghean.gov.vn/tin-chuyen-nganh/9-cach-phong-suy-tinh-mach-chan-can-biet-683198
 
 [www.vinmec.com]
 match = -131.6%%
