--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-28 01:34:31
+lastsearch = 2024-07-28 15:49:46
 
 [chieutrucsaigon.com]
 match = 16.7%%
@@ -32,9 +32,9 @@ title = CHIẾU TRE GIÁ RẺ | Ho Chi Minh City
 url = https://www.facebook.com/chieutregiare/
 
 [shopee.vn]
-match = -37.5%%
-title = (100%% ảnh thật) CHIẾU TRÚC HẠT NÂU, HẠT VÀNG ...
-url = https://shopee.vn/(100-ảnh-thật)-CHIẾU-TRÚC-HẠT-NÂU-HẠT-VÀNG-VIỆT-NAM-NGỌC-LÂM-LOẠI-CAO-CẤP-hàng-dày-mắt-đan-khít--i.11240484.4326979150
+match = 50.0%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [www.yellowpages.vn]
 match = -37.5%%
