--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-07-28 08:08:17
+lastsearch = 2024-07-28 15:48:45
 
 [shopee.vn]
-match = -12.0%%
-title = Màn chụp tự bung đỉnh vuông Kiều Phi - Mẫu mùng ...
-url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-Kiều-Phi-Mẫu-mùng-chụp-tự-bung-người-lớn-chống-muỗi-gấp-gọn-tiện-dụng-i.286850546.3461062779
+match = -36.0%%
+title = Mùng chụp tự bung đỉnh vuông cao cấp khóa to mắt dày ...
+url = https://shopee.vn/Mùng-chụp-tự-bung-đỉnh-vuông-cao-cấp-khóa-to-mắt-dày-dặn-màn-chụp-xếp-gọn-nhiều-size-i.116277580.6522803157
 
 [munghoangphat.com]
-match = 48.0%%
-title = màn chụp đỉnh vuông tự bung
-url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
+match = -36.0%%
+title = (3 CỬA) Mùng đỉnh vuông 1m4 x 2m cao cấp có viền chân
+url = https://munghoangphat.com/-3-cua-mung-dinh-vuong-1m4-x-2m-cao-cap-co-vien-chan.html
 
 [www.mungbaobao.com]
 match = -28.0%%
@@ -32,9 +32,9 @@ title = Mùng Chụp Tự Bung Đỉnh Rộng Màn Đỉnh Vuông BẢO BẢO
 url = https://www.mantubung.com/mung-chup-tu-bung-dinh-rong.html
 
 [manthutrang.com]
-match = -40.0%%
-title = MÀN NGỦ CAO CẤP CHO GIA ĐÌNH & KHÁCH SẠN – MÀN ...
-url = https://manthutrang.com/
+match = 16.0%%
+title = MÀN (MÙNG) CHỤP TỰ BUNG ĐỈNH VUÔNG THU TRANG
+url = https://manthutrang.com/products/man-chup-tu-bung-vien-chan-ren-cao-cap-man-thu-trang
 
 [www.diepxuan.com]
 match = 100.0%%
