--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -22,9 +22,9 @@ title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
 url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
 
 [thegioinem.com]
-match = -105.6%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = -55.6%%
+title = Bảng giá nệm cao su Kim Cương mới 2024
+url = https://thegioinem.com/bang-gia-nem-cao-su-kim-cuong.html
 
 [www.facebook.com]
 match = -88.9%%
