--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-28 13:16:49
+lastsearch = 2024-07-28 15:59:03
 
 [everonvn.com.vn]
 match = 0.0%%
@@ -12,8 +12,8 @@ title = Vỏ Gối Everon Giảm Giá Es1366
 url = https://everonvn.com.vn/everon/588/vo-goi-everon-giam-gia-es1366
 
 [www.lazada.vn]
-match = -161.1%%
-title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
+match = -111.1%%
+title = ♀Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami ...
 url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
 
 [www.reddit.com]
@@ -42,8 +42,8 @@ title = Vỏ gối EPM21065 45x65 - Everon Quảng Bình Trang Chủ
 url = https://www.everonqb.com/vo-goi-epm21065-45x65.html
 
 [shopee.vn]
-match = -127.8%%
-title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ 3size
+match = -116.7%%
+title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ ...
 url = https://shopee.vn/product/146440345/13756241998?gsht=StznoKFCWptXK5Vt
 
 [sieuthicholon.com]
