CI images update

--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-07-28 15:54:54
+lastsearch = 2024-07-28 16:27:07
 
 [dongagroup.vn]
 match = -272.7%%
@@ -192,9 +192,9 @@ title = Happy Deals - Happy Day 2 | RUNNNN Giường kèm ...
 url = https://m.facebook.com/groups/3252180871727606/posts/3866095360336151/
 
 [www.booking.com]
-match = -290.9%%
-title = Country Inn & Suites by Radisson, Albertville, MN
-url = https://www.booking.com/hotel/us/country-inn-suites-albertville.vi.html
+match = -227.3%%
+title = Country Inn & Suites by Radisson, Eagan, MN
+url = https://www.booking.com/hotel/us/country-inn-suites-eagan.vi.html
 
 [chankyhotel.com]
 match = -172.7%%
@@ -210,4 +210,9 @@ url = https://www.chotot.com/tags/mua-ban-giuong-chan-ga-goi-nem/giuong-2m
 match = -227.3%%
 title = Giường Y Tế Sơn Tĩnh Điện - 2 Tay Quay (Có Bô)
 url = https://thietbiyteminhhung.vn/products/giuong-y-te-son-tinh-dien-2-tay-quay-co-bo
+
+[worldsbestdonutsmn.com]
+match = -263.6%%
+title = World's Best Donuts || Grand Marais, Minnesota
+url = https://worldsbestdonutsmn.com/
 
