--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-28 11:24:35
+lastsearch = 2024-07-28 16:24:03
 
 [demxanh.com]
-match = -22.7%%
-title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+match = -27.3%%
+title = Thảm trải giường lông cừu TLC 07 - Đệm Xanh
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-07.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -77,9 +77,9 @@ title = Kệ Đỡ Nệm Lò Xo Kim Cương Divan Asling - Đà Nẵng
 url = https://suongtuyet.com/nem-lo-xo-kim-cuong-divan-asling
 
 [vikicare.com]
-match = -100.0%%
-title = Thảm Đá Nhiệt Nóng Hàn Quốc Chăm Sóc Cá Nhân - Vikicare
-url = https://vikicare.com/tham-da-nhiet-nong-han-quoc-cham-soc-ca-nhan/
+match = 13.6%%
+title = thảm đá nhiệt nóng - Vikicare
+url = https://vikicare.com/product-tag/tham-da-nhiet-nong/
 
 [www.linkedin.com]
 match = -86.4%%
