--- a/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
+++ b/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 lastopen = 2024-06-07 00:25:40
 
 [search]
-lastsearch = 2024-07-28 12:16:32
+lastsearch = 2024-07-28 16:29:13
 
 [dreamland.vn]
-match = 7.5%%
-title = Dreamland chuyên chăn ga gối đệm cao cấp
-url = http://dreamland.vn/Solid-AB45--(Vo-Chan-Dong)-i4079.html
+match = 18.2%%
+title = Chăn ga gối đệm cao cấp Dreamland
+url = http://dreamland.vn/
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -19,17 +19,17 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 [demluxury.com.vn]
 match = 31.6%%
 title = Bộ chăn ga gối Cotton MOC 03 Dreamland
-url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-03-dreamland/
+url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-03-dreamland/?srsltid=AfmBOoqRojguzFecXXLkUZ_V8djbmDQfqvhof-kJQ2z3PdVkCi9mZzyr
 
 [www.facebook.com]
 match = -8.0%%
 title = Chăn Ga Gối Đệm Dreamland
-url = https://www.facebook.com/Dreamland.com.vn/
+url = https://www.facebook.com/changagoidemdreamland/
 
 [thegioidemonline.com]
 match = 62.8%%
 title = Bộ chăn ga gối Dreamland cotton lụa NK PT34
-url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-3-4.html
+url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-3-4.html?srsltid=AfmBOoqfsXzCGodEMojQAB6KKbMS28hzoJsA0Z132Kpj4aVePevavH7G
 
 [demdreamland.vn]
 match = 31.0%%
