--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-07-28 15:48:00
+lastsearch = 2024-07-28 16:16:59
 
 [everon.online]
 match = 50.0%%
@@ -29,7 +29,7 @@ url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept2408
 [vuanem.com]
 match = 17.6%%
 title = Bộ ga chun chần bốn mùa Everon 4 chi tiết màu ESM23012
-url = https://vuanem.com/bo-gcc-everon-bon-mua-4ct-esm23012.html?srsltid=AfmBOorGSgkBC5YOYafSd43T8wAAEDtCpv7Ob87XaeHhoYBz0zEGxtoS
+url = https://vuanem.com/bo-gcc-everon-bon-mua-4ct-esm23012.html
 
 [everonvn.com.vn]
 match = 32.1%%
