--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-07-28 11:47:42
+lastsearch = 2024-07-28 16:12:32
 
 [www.kymdan.com]
-match = -333.3%%
-title = Kymdan
-url = https://www.kymdan.com/home.do?lang=en
+match = -15.6%%
+title = Kymdan natural latex mattresses and pillows
+url = https://www.kymdan.com/category/view.do?v=view&id=27&lang=en
 
 [thegioidemviet.vn]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Bộ Ga Chun Tencel Việt Á - Siêu Mát [SALE -50%%]
 url = https://thegioidemviet.vn/bo-ga-chun-he-tc08/
 
 [toanhuyen.vn]
-match = 6.2%%
-title = Bộ Chăn Ga 160x200cm Ga Phủ Lasante Vải Tencel
-url = https://toanhuyen.vn/san-pham/bo-chan-ga-160x200cm-ga-phu-lasante-vai-tencel-lily-xanh-ghi/
+match = -3.1%%
+title = Bộ Chăn Ga 160x200cm Ga Chun Chần Lasante Vải Tencel
+url = https://toanhuyen.vn/san-pham/bo-chan-ga-160x200cm-ga-chun-chan-lasante-vai-tencel-lily-xanh-ghi/
 
 [yeshomebedding.com]
 match = 11.5%%
@@ -47,9 +47,9 @@ title = Bộ ga chun KymDan 160x200 Tencel
 url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 
 [www.kymdan.us]
-match = 20.0%%
-title = LACAS91004 / Kymdan Lavish CAS
-url = https://www.kymdan.us/en/lacas91001-kymdan-lavish-cas-3
+match = 9.4%%
+title = KYMDAN | Our Quality Your Comfort
+url = https://www.kymdan.us/en/
 
 [sieuthidemcaocap.vn]
 match = 6.2%%
