--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-28 13:22:00
+lastsearch = 2024-07-28 16:22:00
 
 [www.instagram.com]
 match = -92.3%%
@@ -12,9 +12,9 @@ title = Hoi Chan (@hoichandraws) - Instagram
 url = https://www.instagram.com/hoichandraws/?hl=en
 
 [hk.linkedin.com]
-match = -276.9%%
-title = Chow hoi ting Chow - Christian Dior高級時裝公司
-url = https://hk.linkedin.com/in/chow-hoi-ting-chow-a319a2243
+match = -215.4%%
+title = Vincy Chan - Christian Dior高級時裝公司
+url = https://hk.linkedin.com/in/vincy-chan-982992221
 
 [wwd.com]
 match = -253.8%%
@@ -302,8 +302,8 @@ title = Hoi Yi Chan's Reviews on Carousell Hong Kong
 url = https://www.carousell.sg/u/justforu.shop/reviews/
 
 [www.bbc.com]
-match = -230.8%%
-title = South Korea: First lady's Dior bag shakes ... - BBC
+match = -261.5%%
+title = South Korea: First lady's Dior bag shakes country's ...
 url = https://www.bbc.com/news/world-asia-68090638
 
 [www.straitstimes.com]
