--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-28 14:41:58
+lastsearch = 2024-07-28 16:27:28
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -12,9 +12,9 @@ title = CHIẾU TRÚC TĂM H&T CÂY
 url = https://chieutrucsaigon.com/chieu-truc-tam/
 
 [shopee.vn]
-match = -6.7%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -106.7%%
+title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
+url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
 
 [chieutruc.info]
 match = -126.7%%
@@ -94,7 +94,7 @@ url = https://m.facebook.com/groups/648618483681727/posts/852387779971462/
 [www.diepxuan.com]
 match = -13.3%%
 title = Chiếu cây HT 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html?srsltid=AfmBOorVah0AbnW-9lgmuk08YCsRTNu3d0NRwbcoGuTo3MvFh-wxroVv
 
 [huongtruc.com]
 match = -213.3%%
