--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-07-28 13:28:05
+lastsearch = 2024-07-28 16:14:17
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -72,9 +72,9 @@ title = Đài Loan – Wikipedia tiếng Việt
 url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [www.roc-taiwan.org]
-match = -114.3%%
-title = Hộ chiếu - Văn phòng Kinh tế và Văn hóa Đài Bắc tại Việt ...
-url = https://www.roc-taiwan.org/vn_vi/cat/9.html
+match = -128.6%%
+title = Thông tin lãnh sự - Văn phòng Kinh tế và Văn hóa Đài Bắc ...
+url = https://www.roc-taiwan.org/vn_vi/cat/47.html
 
 [zh.wikipedia.org]
 match = -9.5%%
@@ -205,4 +205,9 @@ url = https://www.luavietours.com/du-lich/du-lich-nuoc-ngoai/chau-a/dai-loan/dai
 match = -95.2%%
 title = Đài Bắc - Làng Cầu Vòng - Cao Hùng (Tour tiết kiệm)
 url = https://benthanhtourist.com/tour/du-lich-dai-loan-dai-bac-dai-trung-lang-cau-vong-cao-hung
+
+[noithatdaithanh.com.vn]
+match = -47.6%%
+title = Ghế xếp dây Đài Loan khung sắt Đại Thành - GX16
+url = https://noithatdaithanh.com.vn/ghe-xep-day-dai-loan-khung-sat-dai-thanh-gx16/
 
