--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-28 14:23:00
+lastsearch = 2024-07-28 16:24:40
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title =
 url = https://en.wikipedia.org/wiki/Ren_Gill
 
 [books.google.com]
-match = -210.0%%
-title = Geological Survey Water-supply Paper
-url = https://books.google.com/books?id=zp_a0N22S-AC&pg=PA321&lpg=PA321&dq=man+ren+16&source=bl&ots=WqtGt7a2CZ&sig=ACfU3U1c8MZZOX3ie3xzwJvWmg9N43HrLQ&hl=en&sa=X&ved=2ahUKEwjojaHqmcmHAxVfD1kFHQhpA3gQ6AF6BAgZEAM
+match = -430.0%%
+title = Proceedings of the 10th West Coast Conference on Formal ...
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgjMLrq6&sig=ACfU3U2NWr7miDNKCs6vSCP6D6sfACaSHQ&hl=en&sa=X&ved=2ahUKEwi32biDtcmHAxUHFFkFHZr-B1YQ6AF6BAgZEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
