--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-07-28 14:13:53
+lastsearch = 2024-07-28 16:19:17
 
 [www.everonvn.vn]
-match = 31.1%%
-title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
+match = 7.4%%
+title = ĐỆM LÒ XO EVERON, KING KOIL
+url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 
 [demxanh.com]
-match = 29.8%%
-title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
-url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html?srsltid=AfmBOopvG6mM31HUixXvTvF6IxxtTOIHNTBXBmnTCS-0bsU8gnYYW3ul
+match = 27.9%%
+title = Đệm lò xo 1m6x2m (160x200cm) giá bao nhiêu?
+url = https://demxanh.com/dem-lo-xo-1m6x2m-160x200cm-gia-bao-nhieu.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -29,7 +29,7 @@ url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 [everon.com.vn]
 match = 23.4%%
 title = ĐỆM LÒ XO KINGKOIL (MỸ) Showroom Chăn Ga Gối đệm ...
-url = https://everon.com.vn/kingkoil/?srsltid=AfmBOoqznANQUsExatQnJ9I6HZ8nGw6Gmvr82a6W-G7xZim6WGEI0mUy
+url = https://everon.com.vn/kingkoil/
 
 [sieuthidemhanquoc.com.vn]
 match = 33.3%%
@@ -47,9 +47,9 @@ title = Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
 url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [www.diepxuan.com]
-match = 31.1%%
-title = Điệp Xuân Nệm lò xo Everon Bonnell 200x220x23
-url = https://www.diepxuan.com/nem-lo-xo-everon-bonnell-200x220x23.html?srsltid=AfmBOorIYrFtvtEGeMPlS5ZapytQ2TOcTcCKOPPS5w8wtK-AUIRL_TPU
+match = 36.2%%
+title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
 
 [everon.online]
 match = 25.5%%
