--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-07-28 14:12:54
+lastsearch = 2024-07-28 16:40:36
 
 [everonvn.com.vn]
-match = 7.4%%
-title = Bộ Artemis Tk Giảm Giá - Everon
-url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia
+match = -77.8%%
+title = Bảng giá bộ chăn ga gối Everon Ep 1636 (car) dành cho trẻ em
+url = https://everonvn.com.vn/everon/394/bo-everon-car
 
 [everon.com.vn]
 match = 40.0%%
@@ -18,8 +18,8 @@ url = https://everon.com.vn/epm-19064/
 
 [demxanh.com]
 match = 18.5%%
-title = Bộ chăn ga gối EVeron EPM19068
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
+title = Bộ chăn ga gối Everon EPM19065
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19065.html
 
 [shopee.vn]
 match = -48.1%%
@@ -37,9 +37,9 @@ title = Bộ chăn ga gối Everon ESM-19016
 url = https://sieuthidemhanquoc.com.vn/bo-chan-ga-goi-everon-esm-19016-1485
 
 [everonvietnam.com]
-match = 40.0%%
-title = BỘ EVERON EPM 19064 Modal
-url = https://everonvietnam.com/epm-19064-4/
+match = 36.0%%
+title = BỘ EVERON EPM 19063 Modal
+url = https://everonvietnam.com/epm-19063-2/
 
 [issuu.com]
 match = -18.5%%
