--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-28 09:29:01
+lastsearch = 2024-07-28 16:28:46
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -502,9 +502,9 @@ title = Phan Thanh Nhàn (@ptn.18) • Instagram photos and videos
 url = https://www.instagram.com/ptn.18/
 
 [congan.com.vn]
-match = -200.0%%
-title = Trên đường đi học về, nam sinh ngã vào gầm xe đầu kéo ...
-url = https://congan.com.vn/giao-thong-24h/tren-duong-di-hoc-ve-nam-sinh-nga-vao-gam-xe-dau-keo-bi-can-tu-vong_164835.html
+match = -218.8%%
+title = Va chạm với xe tải rồi ngã lọt gầm container, một người tử ...
+url = https://congan.com.vn/giao-thong-24h/va-cham-xe-tai-roi-nga-lot-gam-container-mot-nguoi-tu-vong_165243.html
 
 [2sao.vn]
 match = -106.2%%
