--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-28 14:38:30
+lastsearch = 2024-07-28 16:38:10
 
 [www.lazada.vn]
 match = -94.4%%
 title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/?srsltid=AfmBOoohM5NPCp26DL0QrIKRerzdBclI8xMv24am0TutGCqj2O6fFsGN
+url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [m.facebook.com]
 match = -100.0%%
@@ -22,9 +22,9 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [thegioinem.com]
-match = -77.8%%
-title = Top 5 nệm mềm, êm bán chạy tại Thế Giới Nệm
-url = https://thegioinem.com/top-5-nem-mem-em-ban-chay-tai-the-gioi-nem.html
+match = -116.7%%
+title = Top 5 nệm mỏng gấp gọn bán chạy nhất Thế Giới Nệm
+url = https://thegioinem.com/top-5-nem-mong-gap-gon-ban-chay-nhat-the-gioi-nem.html
 
 [cotienfoods.vn]
 match = -72.2%%
@@ -87,9 +87,9 @@ title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
 url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = -38.9%%
-title = Chao Recipe Vietnamese Meatball
-url = https://www.tiktok.com/discover/chao-recipe-vietnamese-meatball
+match = -133.3%%
+title = 📍nem chua rán: 230 ngõ chợ khâm thiên. ⭐️: 6-15 cành ...
+url = https://www.tiktok.com/@longlongneee/video/7298670033461431570
 
 [vi.wikipedia.org]
 match = -27.8%%
