--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-28 13:26:27
+lastsearch = 2024-07-28 16:44:45
 
 [gobearcats.com]
 match = -142.1%%
@@ -77,8 +77,8 @@ title = Sandra Oh (@iamsandraohinsta)
 url = https://www.instagram.com/iamsandraohinsta/?hl=en
 
 [medboard.nv.gov]
-match = -100.0%%
-title = Disciplinary Actions - Medical Examiners Board
+match = -121.1%%
+title = Disciplinary Actions - Board of Medical Examiners
 url = https://medboard.nv.gov/Patients/Disciplinary/DisciplinaryActions/
 
 [www.facesofsuicide.com]
