--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-07-28 16:17:58
+lastsearch = 2024-07-28 16:50:28
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOoo-tnLL7_LTPYFyX5CInBlKCvLsRcnoOUpcFDhHFeHDMkrMJGN-
+url = https://demxanh.com/tham-trai-san-bali.html
 
 [www.lazada.vn]
 match = -78.3%%
 title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
-url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html?srsltid=AfmBOopjaJWm2gmMAYGnLr_ll1RjOxOgPYJGZvW48KgQYL-P0U0OKPvk
+url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html
 
 [tiki.vn]
-match = -78.3%%
-title = Thảm trải sàn bali cao cấp kích thước 160*230cm mới - Tiki
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-moi-p41436661.html?spid=41436661
+match = -56.5%%
+title = Thảm trải sàn bali cao cấp kích thước 160*230cm mã 30
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-ma-30-p38118690.html?spid=38118691
 
 [thegioidemviet.vn]
 match = -104.3%%
