--- a/images/chieu-dieu-hoa-cao-su-120x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-120x190/config.ini
@@ -9,7 +9,7 @@ lastsearch = 2024-07-28 16:34:38
 [demxanh.com]
 match = 34.5%%
 title = Chiếu điều hòa cao su non Tencel xanh nhạt
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOoqMbiOV0KkBU2nFANq6gfrECzD7tG5PlNSBzsCA-DRRYAKLCFNp
 
 [entershopping.vn]
 match = -13.8%%
@@ -27,14 +27,14 @@ title = Chiếu điều hòa cao su non Tencel hồng nhạt chính hãng giá t
 url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-hong-nhat/
 
 [changagoidemdep.vn]
-match = -10.3%%
-title = Chiếu điều hòa cao su non Tencel Ghi - Chăn ga gối đệm
-url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
+match = -27.6%%
+title = Chiếu điều hòa cao su non Tencel hồng đất - Chăn ga gối đệm
+url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-hong-dat.html
 
 [thegioidemonline.com]
 match = 34.5%%
 title = Chiếu điều hòa cao su non Tencel Xanh nhạt
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOoo1gJjukpgyf5BtwGQeqivonPv3KTDU3ljHNFYh0tvYoYF6ydR3
 
 [khodem.vn]
 match = 55.2%%
