--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-kem-goi-14.html
 lastopen = 2024-07-01 09:57:37
 
 [search]
-lastsearch = 2024-07-28 14:25:25
+lastsearch = 2024-07-28 16:47:15
 
 [shopee.vn]
-match = -4.0%%
-title = CHIẾU ĐIỀU HOÀ CAO SU NON CAO CẤP MODERN ...
-url = https://shopee.vn/CHIẾU-ĐIỀU-HOÀ-CAO-SU-NON-CAO-CẤP-MODERN-(-video-quay-cận-chất)-i.46360011.4484797264
+match = 0.0%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [meoi.com.vn]
 match = 24.0%%
@@ -39,7 +39,7 @@ url = https://phatdatbinhthoi.com.vn/chieu-dieu-hoa-mat-lanh-tang-kem-2-bao-goi-
 [demxanh.com]
 match = -28.0%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOoqIGybAQj9FXuh8dEL4Ef3FgKImtjgcqNmI1bsFB_Q8cAU5ZBEq
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [tiki.vn]
 match = -20.0%%
