--- a/images/chieu-dieu-hoa-khong-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-14.html
 lastopen = 2024-06-09 22:26:37
 
 [search]
-lastsearch = 2024-07-28 15:18:42
+lastsearch = 2024-07-28 16:50:07
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu Điều Hoà Sợi Mây Tơ Tằm Mát Lạnh Không Gối ...
-url = https://shopee.vn/Chiếu-Điều-Hoà-Sợi-Mây-Tơ-Tằm-Mát-Lạnh-Không-Gối-Cao-Cấp-Chiếu-Có-Chun-Cài-Góc-Hàng-Loại-1-i.529742790.25073007553
+match = 18.5%%
+title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
+url = https://shopee.vn/list/chiếu điều hòa
 
 [demxanh.com]
-match = -14.8%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 14.8%%
+title = Sử dụng chiếu điều hòa có tốt hay không?
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
 
 [tiki.vn]
 match = 33.3%%
@@ -22,9 +22,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [foreverbedding.net]
-match = -59.3%%
-title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
+match = 0.0%%
+title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [kyoryo.vn]
 match = -40.7%%
@@ -42,9 +42,9 @@ title = Review chiếu điều hòa có mát không? Giá bao nhiêu ...
 url = https://chiaki.vn/tin-tuc/review-chieu-dieu-hoa-co-mat-khong-gia-bao-nhieu
 
 [goni.vn]
-match = 18.5%%
-title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 07/2024
-url = https://goni.vn/chieu-dieu-hoa-goni/
+match = -33.3%%
+title = Chiếu điều hòa là gì? Có nên sử dụng chiếu điều hòa không
+url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
 
 [phatdatbinhthoi.com.vn]
 match = -25.9%%
@@ -97,8 +97,8 @@ title = Chiếu Mây Điều Hòa cao cấp
 url = https://nemsaithanh.com/chieu-truc-cac-loai/chieu-may-dieu-hoa-cao-cap/
 
 [fptshop.com.vn]
-match = 0.0%%
-title = 
+match = -29.6%%
+title = Chiếu điều hoà là gì? Dùng chiếu điều hòa có tốt không?
 url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105
 
 [voicon.net]
