--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-28 14:25:26
+lastsearch = 2024-07-28 16:49:42
 
 [www.youtube.com]
 match = -72.7%%
@@ -62,9 +62,9 @@ title = 16 người Việt bị bắt tại Đài Loan vì lừa xuyên biên gi
 url = https://vietnamnet.vn/16-nguoi-viet-bi-bat-tai-dai-loan-vi-lua-xuyen-bien-gioi-497646.html
 
 [www.facebook.com]
-match = 12.0%%
-title = Xin chào, tôi ở Đài Loan | Kaohsiung
-url = https://www.facebook.com/toiodailoan/?locale=vi_VN
+match = -52.0%%
+title = VOA Tiếng Việt - Cảnh sát thành phố Đài Trung của ...
+url = https://www.facebook.com/VOATiengViet/posts/cảnh-sát-thành-phố-đài-trung-của-đài-loan-cho-biết-hôm-286-họ-đã-tìm-thấy-16-ngư/882921030539313/
 
 [baotintuc.vn]
 match = -72.0%%
