--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-28 13:28:49
+lastsearch = 2024-07-28 16:50:49
 
 [www.lazada.vn]
-match = -61.1%%
-title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
+match = -88.9%%
+title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [www.facebook.com]
 match = -77.8%%
@@ -17,9 +17,9 @@ title = NEM Fashion - NEM Fashion added a new photo.
 url = https://www.facebook.com/photo.php?fbid=790551389774227&id=100064581196454&set=a.651941746968526
 
 [thegioinem.com]
-match = -116.7%%
-title = Top 5 nệm mỏng gấp gọn bán chạy nhất Thế Giới Nệm
-url = https://thegioinem.com/top-5-nem-mong-gap-gon-ban-chay-nhat-the-gioi-nem.html
+match = -77.8%%
+title = Top 5 nệm mềm, êm bán chạy tại Thế Giới Nệm
+url = https://thegioinem.com/top-5-nem-mem-em-ban-chay-tai-the-gioi-nem.html
 
 [garan.vn]
 match = -166.7%%
@@ -32,9 +32,9 @@ title = Nệm cao su, gối, giường, salon | Kymdan - Website chính hãng
 url = https://www.kymdan.com/
 
 [www.youtube.com]
-match = -111.1%%
-title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
-url = https://www.youtube.com/watch?v=guu4UvG6cKY
+match = -177.8%%
+title = [ENG SUB] Cho thứ này vào pha bột BÁNH XÈO bánh giòn rất ...
+url = https://www.youtube.com/watch?v=hxI-i5jAeB8
 
 [www.instagram.com]
 match = -177.8%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -16.7%%
-title = Nem Nuong Que Huong Air Fryer
-url = https://www.tiktok.com/discover/nem-nuong-que-huong-air-fryer
+match = -55.6%%
+title = Free Fire Antiban Config File for Ios
+url = https://www.tiktok.com/discover/free-fire-antiban-config-file-for-ios
 
 [www.diepxuan.com]
 match = 11.1%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -122.2%%
-title = Người Việt Bolsa/Orange County | 🌮NEM CHUA THANH ...
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2900660673417630/
+match = -100.0%%
+title = Người Việt ở Seattle | 🔥🔥🔥 𝐌𝐚̆́𝐦 𝐧𝐞̂𝐦 𝐃𝐢̀ 𝐂𝐚̂̉𝐧 Đ𝐚̀ ...
+url = https://m.facebook.com/groups/nguoivietseattle.usa/posts/2080619245611358/
 
 [emartmall.com.vn]
 match = 0.0%%
