--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-07-28 16:13:35
+lastsearch = 2024-07-28 16:53:12
 
 [shopee.vn]
 match = -90.5%%
@@ -34,12 +34,12 @@ url = https://flexhouse.vn/tham-trai-san-phong-ngu
 [everonvn.com.vn]
 match = -119.0%%
 title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường ...
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOooGER_XFUo6rjl7QDGHgbIbP7QWFpT3LEi9kn_Sw4-qM8LZ5Ex3
 
 [comehome.com.vn]
-match = -90.5%%
-title = Kích thước giường ngủ tiêu chuẩn, thông dụng nhất 2024
-url = https://comehome.com.vn/blog/post/kich-thuoc-giuong-ngu
+match = -119.0%%
+title = 15 Mẫu giường ngủ đôi kích thước chuẩn, đẹp, giá rẻ nhất ...
+url = https://comehome.com.vn/blog/post/giuong-ngu-doi
 
 [www.kymdan.com]
 match = 14.3%%
