--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-28 12:48:37
+lastsearch = 2024-07-28 16:57:29
 
 [www.tui.co.uk]
 match = -250.0%%
@@ -289,7 +289,7 @@ url = https://barutblueandiz.otel.direct/mobile/index.aspx?Page=0&cur=KRW
 [www.telegraphherald.com]
 match = -58.3%%
 title = Best-sellers | Features
-url = https://www.telegraphherald.com/news/features/article_bb143402-3e16-11ef-82f7-0b90d3a0e18f.html
+url = https://www.telegraphherald.com/news/features/article_2a2b0cb4-4914-11ef-95fa-1f4609cd6332.html
 
 [www.seatrade-cruise.com]
 match = -225.0%%
@@ -394,5 +394,10 @@ url = https://runwaygirlnetwork.com/2024/07/the-aviation-challenge-skyteam/
 [www.teddyblake.com]
 match = -358.3%%
 title = Teddy Blake: Luxury Designer Bags, 100%% Made In Italy, Fair ...
-url = https://www.teddyblake.com/
+url = https://www.teddyblake.com/?srsltid=AfmBOorV8abpiReXytp8drW7_Y5yUm_hRQGgyUbmk9OVU-91lVMdnvF3
+
+[www.mumsnet.com]
+match = -233.3%%
+title = Gap year working overseas (Japan & South Korea)
+url = https://www.mumsnet.com/talk/higher_education/5129402-gap-year-working-overseas-japan-south-korea
 
