CI images update

--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-07-28 16:29:26
+lastsearch = 2024-07-28 17:27:11
 
 [demxanh.com]
 match = 26.3%%
 title = Chăn lông 5kg mã 02
-url = https://demxanh.com/chan-long-5kg-ma-02.html
+url = https://demxanh.com/chan-long-5kg-ma-02.html?srsltid=AfmBOoq2XIu9h1sQtuseA6Tp5BxUAI83OUMrRlN5STCcdcZfX-319wTt
 
 [shopee.vn]
 match = 43.5%%
@@ -19,12 +19,12 @@ url = https://shopee.vn/Chăn-lông-KQ-đẹp-loại-5kg-i.67105795.1540972315
 [www.diepxuan.com]
 match = 34.8%%
 title = Điệp Xuân Chăn KQ không sóng 5kg
-url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html
+url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOoowCOgt-bms7a_x4aP836K3AxuoFZZvz9xkUHfaByCx47MQTm78
 
 [thegioidemonline.com]
 match = 45.0%%
 title = Chăn lông KQ cao cấp
-url = https://thegioidemonline.com/chan-long-kq-ma-01.html
+url = https://thegioidemonline.com/chan-long-kq-ma-01.html?srsltid=AfmBOooE_lqhb3_bio3xBRIF5E2XwOgX5LLfFTWajTWuL5Mc8wehHSjh
 
 [www.youtube.com]
 match = -87.0%%
