--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-28 17:00:11
+lastsearch = 2024-07-28 17:18:40
 
 [demxanh.com]
 match = 13.8%%
 title = Chăn ga gối Singapore Pyeoda Luxury 5 món
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html?srsltid=AfmBOoot4WcP2tapbCdCs-gP8bz_L4Xv4AW5pFqU5v1okVFjxXe83K-z
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -44,7 +44,7 @@ url = https://dem4mua.vn/san-pham/bo-ga-lua-phu-skysilk-pyeoda/
 [www.diepxuan.com]
 match = 62.1%%
 title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html
+url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html?srsltid=AfmBOopy1XYyV-Y-NaZ4bb6O1mUtgadMnqjuPwu5b5lsfMVQfNiZJ0JS
 
 [www.facebook.com]
 match = 28.0%%
