--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-28 14:39:52
+lastsearch = 2024-07-28 17:16:14
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -17,9 +17,9 @@ title = Yechan (xikers) - Kpop Wiki - Fandom
 url = https://kpop.fandom.com/wiki/Yechan_(xikers)
 
 [kprofiles.com]
-match = -70.6%%
-title = ATEEZ Members Profile (Updated!)
-url = https://kprofiles.com/ateez-members-profile/
+match = -76.5%%
+title = xikers Members Profile (Updated!)
+url = https://kprofiles.com/xikers-members-profile/
 
 [www.qsc.com]
 match = -188.2%%
@@ -87,9 +87,9 @@ title = Sl.No. QUESTION
 url = https://swr.indianrailways.gov.in/uploads/files/1574064319246-GK-final.pdf
 
 [www.quora.com]
-match = -176.5%%
-title = How much do you know about each member of the Korean ...
-url = https://www.quora.com/How-much-do-you-know-about-each-member-of-the-Korean-band-Stray-Kids-What-are-their-interests-hobbies-outside-of-music-Are-they-close-friends-in-real-life-as-well
+match = -211.8%%
+title = Does JYP allow his artists to write down their own songs or ...
+url = https://www.quora.com/Does-JYP-allow-his-artists-to-write-down-their-own-songs-or-does-he-write-it-for-them-like-how-YG-writes-songs-for-Blackpink
 
 [msaniimusicgroup.org]
 match = 0.0%%
