--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-28 15:28:23
+lastsearch = 2024-07-28 17:26:08
 
 [shopee.vn]
 match = -36.8%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -147.4%%
-title = 20 Bài Hát Thiếu Nhi Bé Thích Nghe Nhất 🍎 QUẢ GÌ - ĐOÀN ...
-url = https://www.youtube.com/watch?v=GJeA-eIvjkc
+match = -136.8%%
+title = Cô Dạy Em Tập Thể Dục Buối Sáng - Nhạc Thiếu Nhi Sôi ...
+url = https://www.youtube.com/watch?v=6w-QNggXsJg
 
 [dochoihoangthu.com]
 match = -121.1%%
