--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-07-28 15:41:31
+lastsearch = 2024-07-28 17:15:30
 
 [tiki.vn]
 match = -47.6%%
@@ -12,9 +12,9 @@ title = Chiếu trúc đài loan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chiếu trúc đài loan
 
 [www.facebook.com]
-match = -90.5%%
-title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2: Lữ ...
-url = https://www.facebook.com/photo.php?fbid=844924327674339&id=100064703379579&set=a.669666201866820
+match = -85.7%%
+title = Sau 4 ngày công chiếu tại Đài Loan,... - CGV Cinemas ...
+url = https://www.facebook.com/cgvcinemavietnam/posts/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844928247673947/
 
 [www.roc-taiwan.org]
 match = -42.9%%
@@ -22,9 +22,9 @@ title = Thủ tục cấp đổi hộ chiếu cho người Đài Loan
 url = https://www.roc-taiwan.org/vn_vi/post/62.html
 
 [www.tiktok.com]
-match = -19.0%%
-title = Cách Xem Lịch Chiếu Film Tại Taiwan
-url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
+match = -66.7%%
+title = 18x2 Beyond Youthful Days Có Chiếu Tại Đìa Loan Ko
+url = https://www.tiktok.com/discover/18x2-beyond-youthful-days-có-chiếu-tại-đìa-loan-ko
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
