--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-28 12:57:33
+lastsearch = 2024-07-28 17:22:44
 
 [scholar.google.com]
 match = -43.8%%
@@ -452,9 +452,9 @@ title = Hướng dẫn quần chúng nhân dân và các đoàn đến viếng .
 url = https://xaydungchinhsach.chinhphu.vn/tphcm-huong-dan-quan-chung-nhan-dan-va-cac-doan-den-vieng-tong-bi-thu-nguyen-phu-trong-119240724110435557.htm
 
 [znews.vn]
-match = -87.5%%
-title = Số áo đặc biệt của sao trẻ Real Madrid
-url = https://znews.vn/so-ao-dac-biet-cua-sao-tre-real-madrid-post1488646.html
+match = -162.5%%
+title = Các nam VĐV cao từ 1,90 m của bóng chuyền Việt ...
+url = https://znews.vn/cac-nam-vdv-cao-tu-1-90-m-cua-bong-chuyen-viet-nam-tai-sea-games-31-post1319027.html
 
 [chas.org]
 match = -125.0%%
@@ -497,9 +497,9 @@ title = Nữ diễn viên kém 18 tuổi nói về nụ hôn với Việt Anh
 url = https://vietnamnet.vn/nu-dien-vien-kem-18-tuoi-noi-ve-nu-hon-voi-viet-anh-2303486.html
 
 [baobinhphuoc.com.vn]
-match = -206.2%%
-title = VFF thông báo tạm dừng tổ chức các giải bóng đá kể từ ...
-url = https://baobinhphuoc.com.vn/news/18/160320/vff-thong-bao-tam-dung-to-chuc-cac-giai-bong-da-ke-tu-ngay-20-7
+match = -143.8%%
+title = Câu lạc bộ Hà Nội vô địch Giải U17 quốc gia 2024
+url = https://baobinhphuoc.com.vn/news/18/160659/cau-lac-bo-ha-noi-vo-dich-giai-u17-quoc-gia-2024
 
 [vinhphuc.gov.vn]
 match = -206.2%%
