--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-28 16:50:49
+lastsearch = 2024-07-28 17:23:45
 
 [www.lazada.vn]
 match = -88.9%%
@@ -17,9 +17,9 @@ title = NEM Fashion - NEM Fashion added a new photo.
 url = https://www.facebook.com/photo.php?fbid=790551389774227&id=100064581196454&set=a.651941746968526
 
 [thegioinem.com]
-match = -77.8%%
-title = Top 5 nệm mềm, êm bán chạy tại Thế Giới Nệm
-url = https://thegioinem.com/top-5-nem-mem-em-ban-chay-tai-the-gioi-nem.html
+match = -116.7%%
+title = Top 5 nệm mỏng gấp gọn bán chạy nhất Thế Giới Nệm
+url = https://thegioinem.com/top-5-nem-mong-gap-gon-ban-chay-nhat-the-gioi-nem.html
 
 [garan.vn]
 match = -166.7%%
@@ -32,9 +32,9 @@ title = Nệm cao su, gối, giường, salon | Kymdan - Website chính hãng
 url = https://www.kymdan.com/
 
 [www.youtube.com]
-match = -177.8%%
-title = [ENG SUB] Cho thứ này vào pha bột BÁNH XÈO bánh giòn rất ...
-url = https://www.youtube.com/watch?v=hxI-i5jAeB8
+match = -111.1%%
+title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
+url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.instagram.com]
 match = -177.8%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -100.0%%
-title = Người Việt ở Seattle | 🔥🔥🔥 𝐌𝐚̆́𝐦 𝐧𝐞̂𝐦 𝐃𝐢̀ 𝐂𝐚̂̉𝐧 Đ𝐚̀ ...
-url = https://m.facebook.com/groups/nguoivietseattle.usa/posts/2080619245611358/
+match = -122.2%%
+title = Người Việt Bolsa/Orange County | 🌮NEM CHUA THANH ...
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2900660673417630/
 
 [emartmall.com.vn]
 match = 0.0%%
