CI images update

--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-28 14:44:06
+lastsearch = 2024-07-28 17:44:51
 
 [burningman.org]
-match = -60.0%%
-title = The 10 Principles of Burning Man
+match = 0.0%%
+title = 
 url = https://burningman.org/about/10-principles/
 
 [www.usatoday.com]
@@ -1105,4 +1105,9 @@ url = https://support.apple.com/en-us/102655
 match = -160.0%%
 title = CITY OF KANSAS CITY | OFFICIAL WEBSITE | Home
 url = https://www.kcmo.gov/
+
+[www.wisn.com]
+match = -200.0%%
+title = Milwaukee News, Weather and Sports - Wisconsin News ...
+url = https://www.wisn.com/
 
