--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-long-muji.html
 lastopen = 2024-07-01 21:12:38
 
 [search]
-lastsearch = 2024-07-28 17:28:56
+lastsearch = 2024-07-28 17:47:36
 
 [www.muji.com]
 match = 7.1%%
@@ -47,9 +47,9 @@ title = Chăn lông cừu Muji thương hiệu số 1 Nhật Bản - Coda
 url = https://coda.io/@hoang-quang-tuyen/chan-long-cuu-muji-thuong-hieu-so-1-nhat-ban
 
 [shopee.vn]
-match = 28.6%%
-title = Chăn Lông Nhung Xám MUJI
-url = https://shopee.vn/Chăn-Lông-Nhung-Xám-MUJI-i.601622525.12174454922
+match = -171.4%%
+title = Chăn Lông Tuyết Muji Siêu Mềm Mịn, Chăn Lông Cao Cấp
+url = https://shopee.vn/Chăn-Lông-Tuyết-Muji-Siêu-Mềm-Mịn-Chăn-Lông-Cao-Cấp-i.494586166.11657795603
 
 [changagoidemdep.vn]
 match = 35.7%%
