--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-28 15:37:21
+lastsearch = 2024-07-28 17:42:23
 
 [www.diepxuan.com]
 match = 35.7%%
 title = Chiếu gấp Đài Loan 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html?srsltid=AfmBOooy9gOSyArYd2LtvPy4qgWzE2faZwMtGxIGXPXUcBz40n2zd4lk
+url = https://www.diepxuan.com/chieu-gap-dai-loan-180x200.html
 
 [www.lazada.vn]
 match = -53.6%%
@@ -177,9 +177,9 @@ title = TP. Đào Viên · XUẤT KHẨU LAO ĐỘNG ĐÀI LOAN - Coda
 url = https://coda.io/@xuatkhaulaodong/xkld-dai-loan/tp-ao-vien-13
 
 [abina.vn]
-match = -75.0%%
-title = Viên uống Xtend-Life NR6: tăng sinh NAD tự nhiên, chống lão ...
-url = https://abina.vn/xtend-life-nr6-tang-sinh-nad-tu-nhien-tang-cuong-tuoi-tho/
+match = -57.1%%
+title = Bột làm 1kg sữa chua Hy Lạp vị mật ong manuka Easiyo - Abina
+url = https://abina.vn/sua-chua-hy-lap-mat-ong-manuka-easiyo-manuka-honey/
 
 [kinhtexaydung.gov.vn]
 match = -21.4%%
