--- a/images/chieu-dieu-hoa-cao-su-120x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-120x190.html
 lastopen = 2024-06-06 16:55:18
 
 [search]
-lastsearch = 2024-07-28 16:34:38
+lastsearch = 2024-07-28 17:35:57
 
 [demxanh.com]
 match = 34.5%%
 title = Chiếu điều hòa cao su non Tencel xanh nhạt
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOoqMbiOV0KkBU2nFANq6gfrECzD7tG5PlNSBzsCA-DRRYAKLCFNp
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [entershopping.vn]
 match = -13.8%%
@@ -27,14 +27,14 @@ title = Chiếu điều hòa cao su non Tencel hồng nhạt chính hãng giá t
 url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-hong-nhat/
 
 [changagoidemdep.vn]
-match = -27.6%%
-title = Chiếu điều hòa cao su non Tencel hồng đất - Chăn ga gối đệm
-url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-hong-dat.html
+match = -10.3%%
+title = Chiếu điều hòa cao su non Tencel Ghi - Chăn ga gối đệm
+url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
 
 [thegioidemonline.com]
 match = 34.5%%
 title = Chiếu điều hòa cao su non Tencel Xanh nhạt
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOoo1gJjukpgyf5BtwGQeqivonPv3KTDU3ljHNFYh0tvYoYF6ydR3
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [khodem.vn]
 match = 55.2%%
