--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-28 12:32:44
+lastsearch = 2024-07-28 17:37:01
 
 [www.amazon.com]
 match = -309.1%%
@@ -28,7 +28,7 @@ url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
 match = -309.1%%
-title = Ghế xoay da trưởng phòng - SG903 - Nội Thất Hòa Phát
+title = Ghế xoay da trưởng phòng - SG903 - Nội thất Hòa Phát
 url = https://noithathoaphat.com/ghe-da-truong-phong-sg903
 
 [dandoxe.com]
@@ -104,7 +104,7 @@ url = https://ghedatruongan.com/ban-ghe-da-thu-duc/
 [www.lazada.vn]
 match = -290.9%%
 title = Đệm Lót Ghế Da Chống Bẩn Chống Thấm Nước Dày Dặn ...
-url = https://www.lazada.vn/products/dem-lot-ghe-da-chong-ban-chong-tham-nuoc-day-dan-dem-lot-ghe-ban-an-dem-ghe-chong-truot-hinh-mong-ngua-van-phong-ngoi-lau-i2424774730.html
+url = https://www.lazada.vn/products/dem-lot-ghe-da-chong-ban-chong-tham-nuoc-day-dan-dem-lot-ghe-ban-an-dem-ghe-chong-truot-hinh-mong-ngua-van-phong-ngoi-lau-i2424774730.html?srsltid=AfmBOorY84ALK8V-9J9tPrifrnwmeMc6heF0G7F-Zh_QDnWM7rPPBC7l
 
 [richhome.vn]
 match = -190.9%%
