CI images update

--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-28 17:18:40
+lastsearch = 2024-07-28 17:51:45
 
 [demxanh.com]
-match = 13.8%%
-title = Chăn ga gối Singapore Pyeoda Luxury 5 món
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html?srsltid=AfmBOoot4WcP2tapbCdCs-gP8bz_L4Xv4AW5pFqU5v1okVFjxXe83K-z
+match = -41.4%%
+title = Đại lý mua chăn ga gối cưới Hải Phòng chính hãng, giá rẻ
+url = https://demxanh.com/bo-chan-ga-goi-cuoi-hai-phong.html
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga vỏ gối lụa 5 món Skysilk hàng Pyeoda cao cấp ...
 url = https://shopee.vn/Bộ-chăn-ga-vỏ-gối-lụa-5-món-Skysilk-hàng-Pyeoda-cao-cấp-có-túi-đựng-i.60303676.20559202272
 
 [thegioidemonline.com]
-match = 34.5%%
-title = Bộ chăn ga gối Pyeoda LCHARME GẤM 7 món
-url = https://thegioidemonline.com/bo-chan-ga-goi-pyeoda-lcharme-gam-7-mon.html
+match = 27.6%%
+title = Bộ chăn ga gối Hanvico LIVING - LV62
+url = https://thegioidemonline.com/bo-chan-ga-goi-hanvico-living-lv62.html
 
 [dem4mua.vn]
 match = 6.9%%
@@ -44,12 +44,12 @@ url = https://dem4mua.vn/san-pham/bo-ga-lua-phu-skysilk-pyeoda/
 [www.diepxuan.com]
 match = 62.1%%
 title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html?srsltid=AfmBOopy1XYyV-Y-NaZ4bb6O1mUtgadMnqjuPwu5b5lsfMVQfNiZJ0JS
+url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html
 
 [www.facebook.com]
-match = 28.0%%
-title = Chăn Ga Gối Đệm Singapore
-url = https://www.facebook.com/changagoisingapore/?locale=uk_UA
+match = 17.2%%
+title = Đệm Xanh Bắc Giang | Bac Giang
+url = https://www.facebook.com/demxanh.308bacgiang/?locale=hy_AM
 
 [changagoidemdep.vn]
 match = 3.4%%
