--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-28 03:48:02
+lastsearch = 2024-07-28 18:01:29
 
 [en.wikipedia.org]
-match = 0.0%%
-title = March First Movement
-url = https://en.wikipedia.org/wiki/March_First_Movement
+match = 8.7%%
+title = Korea under Japanese rule
+url = https://en.wikipedia.org/wiki/Korea_under_Japanese_rule
 
 [www.britannica.com]
-match = 0.0%%
-title = 
-url = https://www.britannica.com/biography/Park-Chung-Hee
+match = -30.4%%
+title = Armistice, Conflict, Truce - Korean War
+url = https://www.britannica.com/event/Korean-War/Armistice
 
 [www.38north.org]
 match = -100.0%%
