--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-07-28 14:21:38
+lastsearch = 2024-07-28 17:54:09
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -14,7 +14,7 @@ url = https://hanvico.com.vn/san-pham/lv55/
 [www.diepxuan.com]
 match = -4.8%%
 title = Điệp Xuân Bộ chăn ga gối màu xoa tin 14
-url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html?srsltid=AfmBOoqRFVaX6tg-OfQKz8O3wJ5K-rrIDO30Ep9aoJA6SvzaY2vk663k
+url = https://www.diepxuan.com/bo-chan-ga-goi-mau-xoa-tin-14.html
 
 [lasantevn.com]
 match = -57.1%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối TTN 14 (120*190 cm) - Koala
 url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
-match = -28.6%%
-title = Bộ chăn ga gối cotton 100%% mã màu BC22-063
-url = https://changagoidemsonghong.com/chan-ga-goi-bc63
+match = -42.9%%
+title = Bộ chăn ga gối cotton 100%% dòng Basic mã BC-29
+url = https://changagoidemsonghong.com/chan-ga-goi-bc29
 
 [songhong.info]
 match = -19.0%%
@@ -44,7 +44,7 @@ url = https://songhong.info/chan-ga-goi-bc14
 [demxanh.com]
 match = -52.4%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 14
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html?srsltid=AfmBOoo8BCsdqrLK95lMQTgmla1NQKe2EynKojHBCVDNNgE3l5leSBQy
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-14.html
 
 [everonletrongtan.com]
 match = 19.0%%
@@ -54,7 +54,7 @@ url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 [foreverbedding.net]
 match = -66.7%%
 title = Bộ ga chun chần mặt Elegant H140 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-elegant-h140?srsltid=AfmBOoqIoKRFwUWJdcRVOf4-qTCsXDNXvAjnoYgR17lDwgbRk_7TIK1v
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-elegant-h140
 
 [changmibedding.com]
 match = -33.3%%
@@ -79,7 +79,7 @@ url = https://shopee.vn/Bộ-ga-gối-cotton-đũi-phủ-bèo-bọc-chun-trần-
 [shop.chanrathanhthuy.com]
 match = 57.1%%
 title = Bộ Ga Bọc Lụa Tơ Tằm 14
-url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-lua-to-tam-14?srsltid=AfmBOoobS8sId91z4NELKuc7x5I8SzwEY8EAlDb8H2RF01MM0SxHhjoZ
+url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-lua-to-tam-14
 
 [chandrapsaigon.com]
 match = -71.4%%
