--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -64,7 +64,7 @@ url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129
 [www.muji.us]
 match = -7.1%%
 title = Tableware | Home
-url = https://www.muji.us/collections/tableware
+url = https://www.muji.us/collections/tableware?srsltid=AfmBOoo3EqXlX-GIlHWrTUPQVGxBNv7gvi_69icn801M0MPtsmQJ7hOQ
 
 [xachtaynhat.com.vn]
 match = -35.7%%
@@ -104,7 +104,7 @@ url = https://www.tiktok.com/discover/Chăn-lông-muji
 [www.lazada.vn]
 match = -62.5%%
 title = Untitled
-url = https://www.lazada.vn/tag/chan-long-muji/
+url = https://www.lazada.vn/tag/chan-long-muji/?srsltid=AfmBOoq1YAENZbzfH25Mj114IGkkTt3KDDh0zuYtfVmF1I-ogfGlW0mr
 
 [sugoimart.com]
 match = -257.1%%
