--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-28 14:17:54
+lastsearch = 2024-07-28 17:47:38
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -19,7 +19,7 @@ url = https://dungcuykhoakimminh.com/tag/Tao&trang-21
 [mych.vn]
 match = -60.7%%
 title = Khay Đá 14 Ô Làm Đá Viên, Rau Câu, Trữ Đồ Ăn Dặm ... - Mych
-url = https://mych.vn/san-pham/khay-da-14-o-lam-da-vien-rau-cau-tru-do-an-dam-cho-be-co-nap-day.html
+url = https://mych.vn/san-pham/khay-da-14-o-lam-da-vien-rau-cau-tru-do-an-dam-cho-be-co-nap-day.html?srsltid=AfmBOoqRdWkdVE8K-35g4PCqZ50bPbmlq-ZhgOxrVCXqJle5p43s12-x
 
 [xn--chiabngvngloiworldcupkhuvcchu-8nc3a50cm302fybaw6p.nigioivietnam.vn]
 match = -60.7%%
