--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-28 14:57:48
+lastsearch = 2024-07-28 17:59:03
 
 [eva.vn]
 match = -131.6%%
@@ -49,7 +49,7 @@ url = https://books.google.com/books?id=oC8iDAAAQBAJ&pg=PA325&lpg=PA325&dq=chieu
 [www.diepxuan.com]
 match = 5.3%%
 title = Chiếu cây mộc hoa 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html
+url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html?srsltid=AfmBOoq2OS4JTRJfvOR8NG8ghfQZTKm6T_uUSdekvkuUPm6_vXYCGSeR
 
 [mietistudio.com]
 match = -131.6%%
