--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-28 12:25:13
+lastsearch = 2024-07-28 17:48:38
 
 [www.georgianicols.com]
 match = -192.3%%
@@ -27,9 +27,9 @@ title = License renewal procedures
 url = https://www.iihs.org/topics/older-drivers/license-renewal-laws-table
 
 [en.wikipedia.org]
-match = -160.0%%
-title = Svara
-url = https://en.wikipedia.org/wiki/Svara
+match = -92.3%%
+title = Anthony Edwards (basketball)
+url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
 
 [www.facebook.com]
 match = -84.6%%
