--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-28 11:41:09
+lastsearch = 2024-07-28 17:46:58
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -123.8%%
 title = A Critical Pronouncing Dictionary, and Expositor of the ...
-url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCp6zrno&sig=ACfU3U0Fna3KBBTAWFkL5n5N556kqSOS0w&hl=en&sa=X&ved=2ahUKEwjq3tDw1siHAxWUD1kFHaZZEFEQ6AF6BAgcEAM
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCp9ztoo&sig=ACfU3U1E-YjYi1TaBvn8WDh1LO8MtrwjVQ&hl=en&sa=X&ved=2ahUKEwiWnOm1x8mHAxVHhIkEHdm9DM0Q6AF6BAgZEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -95.2%%
-title = NEM Dubrovnik 2023, Day 2: record number of decision ...
-url = https://www.formatbiz.it/dettNews.aspx?id=10170
+match = -76.2%%
+title = Nem Dubrovnik 2024 confirms a record of partecipants
+url = https://www.formatbiz.it/dettNews.aspx?id=11256
 
 [yro.slashdot.org]
 match = -114.3%%
