--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-07-28 15:36:19
+lastsearch = 2024-07-28 17:56:38
 
 [www.everonvn.vn]
 match = 20.0%%
@@ -17,9 +17,9 @@ title = Nệm Everon Ceramic
 url = https://everon.vip/nem-everon-ceramic
 
 [everonvn.com.vn]
-match = -75.0%%
-title = Đệm Bông Ép Everon 1200x1900 Mua Cho Giường Đơn ...
-url = https://everonvn.com.vn/everon/1900/dem-bong-ep-everon-co-120x190
+match = 20.0%%
+title = Bảng Giá Đệm Everon Năm 2024
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOopv_OXDOD9eqGPDzddVvjailrxSXnotw8tnVXFHPvMfe85k3fEZ
 
 [everonchinhhang.vn]
 match = -50.0%%
@@ -44,7 +44,7 @@ url = https://everon365.vn/dem-bong-ep-everon-ha-noi.html
 [everon.com.vn]
 match = -80.0%%
 title = 120*200 | Showroom Chăn Ga Gối đệm EVERON
-url = https://everon.com.vn/kich-co/120200/
+url = https://everon.com.vn/kich-co/120200/?srsltid=AfmBOop6gcNawXAsDecYM5Rqk98QY8tckJaU9djYTK18rBAAstN2s7ge
 
 [demqueensweet.com]
 match = -130.0%%
@@ -54,12 +54,12 @@ url = https://demqueensweet.com/
 [www.lazada.vn]
 match = -125.0%%
 title = Nệm( Đệm) bông ép Everon gấp 3 tiện lợi dễ di chuyển ...
-url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html
+url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html?srsltid=AfmBOoqjCx8mnOOjgrnuBWe_KafOwjtylTqeizPMRc3cWJc-5gL51VvD
 
 [ru9.vn]
 match = -150.0%%
 title = Nệm lò xo 1m2 giá bao nhiêu? Bảng giá các thương hiệu tốt
-url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu
+url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu?srsltid=AfmBOop67XdJrBTvFRr0IbcsBxIeRHlVhaV4RF9IologRhCDbREuWcUw
 
 [www.diepxuan.com]
 match = 0.0%%
