--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-28 15:33:35
+lastsearch = 2024-07-28 17:55:12
 
 [www.lazada.vn]
 match = -111.1%%
 title = Nem Cua Bể Đặc Sản Hải Phòng khay 12 cái Thơm ngon
-url = https://www.lazada.vn/products/nem-cua-be-dac-san-hai-phong-khay-12-cai-thom-ngon-i1960185476.html?srsltid=AfmBOoobn1Xq3aneFOeWxOrIukePkUcFwVJ6HJXH8rD8Ec8SPca3zgcp
+url = https://www.lazada.vn/products/nem-cua-be-dac-san-hai-phong-khay-12-cai-thom-ngon-i1960185476.html
 
 [www.coastpneumatics.com]
 match = -116.7%%
@@ -22,9 +22,9 @@ title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
 url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
 
 [thegioinem.com]
-match = -55.6%%
-title = Bảng giá nệm cao su Kim Cương mới 2024
-url = https://thegioinem.com/bang-gia-nem-cao-su-kim-cuong.html
+match = -105.6%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.facebook.com]
 match = -88.9%%
@@ -59,7 +59,7 @@ url = https://www.instagram.com/nemfurniturejsc/?hl=en
 [www.diepxuan.com]
 match = -55.6%%
 title = Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html?srsltid=AfmBOoo1Nk6vDVl2z-fCit_KgSnjzYeWh5eFOlyDJmFXCc_KmthPDjf2
+url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 
 [nemphuoclong.vn]
 match = -83.3%%
