CI images update

--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-28 15:17:40
+lastsearch = 2024-07-28 18:38:42
 
 [zhangbrickshop.com]
 match = -133.3
@@ -94,7 +94,7 @@ url = https://www.vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-t
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 10
-url = https://www.diepxuan.com/chieu-lac-d2-10.html?srsltid=AfmBOopVbRw-d2v_FTdIDQaA9PJ4QyTpVd_bRnU99alAMProsSIjRrSx
+url = https://www.diepxuan.com/chieu-lac-d2-10.html
 
 [visana.vn]
 match = -240.0%%
@@ -289,7 +289,7 @@ url = https://rentapartment.vn/vietnam-zip-postal-code/
 [alphardaudio.us]
 match = -100.0%%
 title = Machete ML-10S D2 10" 600W MAX Subwoofer
-url = https://alphardaudio.us/products/machete-ml-10s-d2-subwoofer?srsltid=AfmBOor704sxs0mzZFdAlCS8XvBLTnkh2LFK6-SaFkhQHpN0-iYYhoo3
+url = https://alphardaudio.us/products/machete-ml-10s-d2-subwoofer
 
 [www.handspan.com]
 match = -126.7%%
