--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-28 16:34:59
+lastsearch = 2024-07-28 18:29:43
 
 [everon.online]
 match = 19.2%%
@@ -29,7 +29,7 @@ url = http://www.changagoidemeveron.vn/3/everon/chan-bon-mua-everon-lite-eve-01.
 [www.everonvni.vn]
 match = 30.8%%
 title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
-url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/?srsltid=AfmBOoqI_eEsMd1Mqod_Ds6Mk9xz_RdqabSjchO83GAeUf8k0Yvd-XCJ
+url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
 
 [www.tiktok.com]
 match = -90.9%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/hoangtuetam
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVRKuE4H&sig=ACfU3U00Ho0w7SGdBTX9VBbwwYkuERyhMA&hl=en&sa=X&ved=2ahUKEwiApKOqt8mHAxVjK0QIHQb7CgoQ6AF6BAgdEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVRLrD3B&sig=ACfU3U2E_n9hTVditfUUxRpLNrppcBB18A&hl=en&sa=X&ved=2ahUKEwjdpf380MmHAxVEle4BHR9PGsgQ6AF6BAgWEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
