--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-28 17:51:45
+lastsearch = 2024-07-28 18:40:46
 
 [demxanh.com]
 match = -41.4%%
@@ -47,9 +47,9 @@ title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html
 
 [www.facebook.com]
-match = 17.2%%
-title = Đệm Xanh Bắc Giang | Bac Giang
-url = https://www.facebook.com/demxanh.308bacgiang/?locale=hy_AM
+match = -27.8%%
+title = Đệm Xanh Bắc Giang
+url = https://www.facebook.com/demxanh.308bacgiang/?locale=nl_BE
 
 [changagoidemdep.vn]
 match = 3.4%%
