--- a/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-16.html
 lastopen = 2024-06-09 23:43:24
 
 [search]
-lastsearch = 2024-07-28 17:27:34
+lastsearch = 2024-07-28 18:28:21
 
 [demxanh.com]
 match = -3.3%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOooXfR51VMI2crImJpya1nCEyoZn9DSR_xDoB_TKs2YNRKPkgrvj
 
 [suongtuyet.com]
 match = -13.3%%
@@ -34,7 +34,7 @@ url = https://tiki.vn/blog/chieu-dieu-hoa/
 [demviethome.vn]
 match = 26.7%%
 title = Chiếu điều hòa Latex C16 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c16/?srsltid=AfmBOorbJ_AdYGfM0fGisg2GEP1x2kLAKWbqXkmQ8h44v0kcx0BnrNEh
 
 [www.dienmayxanh.com]
 match = -36.7%%
