--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-28 13:47:18
+lastsearch = 2024-07-28 18:28:42
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -86.7%%
-title = PHOTOTIMEVietnam | Ho Chi Minh City
-url = https://www.facebook.com/phototimevn/
+match = -220.0%%
+title = Dookki Vietnam - 🍴Buffet Tokbokki siêu HOT khu D2 Bình...
+url = https://www.facebook.com/DookkiVietnam/posts/buffet-tokbokki-siêu-hot-khu-d2-bình-thạnh-dookki-buffet-139-141-nguyễn-gia-trí-/2301597160110405/
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -52,8 +52,8 @@ title = LineaBon D3K2 | Vitamin D3 K2 Tăng chiều cao hiệu quả cho ...
 url = https://www.lineabon.vn/product-page/lineabon-d3k2
 
 [www.diepxuan.com]
-match = 20.0%%
-title = Chiếu lác D2 12 - Điệp Xuân
+match = 33.3%%
+title = Điệp Xuân Chiếu lác D2 12
 url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
