--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-28 17:41:17
+lastsearch = 2024-07-28 18:35:54
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgjNGnpd&sig=ACfU3U1WKN_cXuRA0BqYecwQxIMSCbyEQw&hl=en&sa=X&ved=2ahUKEwip4KeTxsmHAxW2IkQIHTmjCeQQ6AF6BAgbEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgjNJqn9&sig=ACfU3U1eqsvv_JXBIAgkoMpeFGKHE9etaw&hl=en&sa=X&ved=2ahUKEwicteCt0smHAxVlFzQIHQjABXMQ6AF6BAgaEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
