--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-28 17:53:08
+lastsearch = 2024-07-28 18:27:39
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -162,9 +162,9 @@ title = Naval Forces Korea - Navy.mil
 url = https://cnrk.cnic.navy.mil/
 
 [books.google.com]
-match = -180.0%%
-title = The Japan Daily Mail - Volume 34 - Page 194 - Google Books Result
-url = https://books.google.com/books?id=Zm0zAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+18&source=bl&ots=38NC8XuqTq&sig=ACfU3U2DuzeN6qulbWftKpozZ2EMFr8VsA&hl=en&sa=X&ved=2ahUKEwiY_7jmyMmHAxU5GtAFHbhTKsQQ6AF6BAghEAM
+match = -115.0%%
+title = Japan Weekly Mail - Page 194 - Google Books Result
+url = https://books.google.com/books?id=QyVCAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+18&source=bl&ots=_sobGQO3kx&sig=ACfU3U23f3_4r5nv--TgjE3VvG7pQR2g7Q&hl=en&sa=X&ved=2ahUKEwiL4N7B0MmHAxUVJEQIHSIpMFAQ6AF6BAhCEAM
 
 [strandedonpeel.my-free.website]
 match = -45.0%%
