CI images update

--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-07-28 17:44:17
+lastsearch = 2024-07-28 18:54:25
 
 [chieutrucsaigon.com]
-match = 16.7%%
-title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
+match = -20.8%%
+title = XU HƯỚNG SỬ DỤNG CHIẾU TĂM TRÚC NĂM 2019
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/xu-huong-su-dung-chieu-tam-truc-nam-2019-68.html
 
 [demxanh.com]
 match = -8.3%%
@@ -17,9 +17,9 @@ title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
 url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
 
 [chieutrelanlan.com]
-match = -66.7%%
-title = Chiếu trúc 0.8m hạt nhỏ loại không viền màu trắng chất ...
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-80x190cm-19.html
+match = -62.5%%
+title = Mua chiếu trúc kích thước nhỏ 1 người nằm giá nhiêu là đủ
+url = https://chieutrelanlan.com/chieu-truc-danh-cho-sinh-vien-cong-nhan-va-nhan-vien-van-phong-k33.html
 
 [trangvangvietnam.com]
 match = -37.5%%
@@ -128,8 +128,8 @@ url = https://xaydungchinhsach.chinhphu.vn/tphcm-huong-dan-quan-chung-nhan-dan-v
 
 [thuvienphapluat.vn]
 match = -79.2%%
-title = Tỷ lệ đóng BHXH từ 1/7/2025? Mức đóng BHXH bắt buộc ...
-url = https://thuvienphapluat.vn/phap-luat/ty-le-dong-bhxh-tu-172025-muc-dong-bhxh-bat-buoc-cua-nguoi-lao-dong-va-doanh-nghiep-nhu-the-nao-168864.html
+title = Thông tư 12/2019/TT-BCT xuất xứ hàng hóa trong Hiệp ...
+url = https://thuvienphapluat.vn/van-ban/Xuat-nhap-khau/Thong-tu-12-2019-TT-BCT-xuat-xu-hang-hoa-trong-Hiep-dinh-khung-ve-hop-tac-kinh-te-toan-dien-420674.aspx
 
 [tamanhhospital.vn]
 match = -91.7%%
@@ -140,4 +140,19 @@ url = https://tamanhhospital.vn/vat-lieu-tram-rang/
 match = -12.5%%
 title = Ban Chỉ đạo thu Ngân sách tỉnh Tây Ninh
 url = https://www.tayninh.gov.vn/vi/news/dua-nghi/ban-chi-dao-thu-ngan-sach-tinh-tay-ninh-dam-bao-thu-ngan-sach-dung-du-va-kip-thoi-47776.html
+
+[thietthach.vn]
+match = -50.0%%
+title = THIET THACH GROUP: Kiến Trúc - Xây Dựng - Nội Thất
+url = https://thietthach.vn/
+
+[dsvn.vn]
+match = -87.5%%
+title = Tổng công ty đường sắt Việt Nam - Bán vé tàu trực tuyến
+url = https://dsvn.vn/
+
+[thdt.vn]
+match = -70.8%%
+title = Trang chủ - Đài Phát thanh và Truyền hình Đồng Tháp
+url = https://thdt.vn/
 
