--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-07-28 18:32:47
+lastsearch = 2024-07-28 18:54:46
 
 [www.instagram.com]
-match = -107.7%%
-title = Hoi Chan (@hoichandraws) - Instagram
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -223.1%%
+title = Yuki Hoi (@hoisoki) • Instagram photos and videos
+url = https://www.instagram.com/hoisoki/?hl=en
 
 [www.linkedin.com]
-match = 23.1%%
-title = Hoi Chan Studio
-url = https://www.linkedin.com/in/yiu-hoi-chan
+match = -192.3%%
+title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
+url = https://www.linkedin.com/in/hoi-ki-chan-519219147
 
 [www.creativeboom.com]
 match = -307.7%%
