--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-28 16:27:28
+lastsearch = 2024-07-28 18:44:06
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -94,7 +94,7 @@ url = https://m.facebook.com/groups/648618483681727/posts/852387779971462/
 [www.diepxuan.com]
 match = -13.3%%
 title = Chiếu cây HT 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-150x190.html?srsltid=AfmBOorVah0AbnW-9lgmuk08YCsRTNu3d0NRwbcoGuTo3MvFh-wxroVv
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [huongtruc.com]
 match = -213.3%%
