--- a/images/chieu-gap-dai-loan-lua-16/config.ini
+++ b/images/chieu-gap-dai-loan-lua-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-16.html
 lastopen = 2024-06-09 21:33:58
 
 [search]
-lastsearch = 2024-07-28 18:10:43
+lastsearch = 2024-07-28 18:51:59
 
 [www.youtube.com]
 match = -72.7%%
@@ -425,4 +425,9 @@ url = https://thangnhomnhapkhau.com/thang-nhom-gap-dai-loan-pal-b6-205
 match = -100.0%%
 title = https://m.sabomall.com/sitemap/category/phukiencongnghe/3
 url = https://sabomall.com/sitemap/category/phukiencongnghe/3
+
+[thanhnien.vn]
+match = -44.0%%
+title = Đài Loan: tin tức, hình ảnh, video, bình luận
+url = https://thanhnien.vn/dai-loan.html
 
