CI images update

--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-28 18:13:27
+lastsearch = 2024-07-28 20:07:38
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -283,8 +283,8 @@ url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-n
 
 [vietstock.vn]
 match = -218.8%%
-title = Phân tích kỹ thuật phiên chiều 16/07: Tâm lý lạc quan quay ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1607-tam-ly-lac-quan-quay-tro-lai-585-1207761.htm
+title = Vietstock Weekly 29/07-02/08/2024: Triển vọng ngắn hạn ...
+url = https://vietstock.vn/2024/07/vietstock-weekly-2907-02082024-trien-vong-ngan-han-chua-the-lac-quan-1636-1212510.htm
 
 [baohungyen.vn]
 match = -200.0%%
