--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-28 19:22:08
+lastsearch = 2024-07-28 20:00:24
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
 [books.google.com]
 match = -43.5%%
 title = Vietnam - Page 187 - Google Books Result
-url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYqYcbM1K&sig=ACfU3U3tkiYR-JjG5XBONVZsa4ipKd1cIQ&hl=en&sa=X&ved=2ahUKEwiw_NrTu7qHAxXfElkFHdNwADgQ6AF6BAgiEAM
+url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrTf7SZL&sig=ACfU3U2HCp_7Nnv01Y5Fyc_FxVCqcLUOsA&hl=en&sa=X&ved=2ahUKEwjGzdGf5cmHAxVwOjQIHZeQDqQQ6AF6BAgkEAM
 
 [www.travelweekly.com]
 match = -87.0%%
