--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-07-28 17:25:49
+lastsearch = 2024-07-28 19:59:24
 
 [shopee.vn]
 match = 0.0%%
@@ -24,7 +24,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demxanh.com]
 match = -25.0%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOoo7mzlAXPuhdj8thn0ozptLeh_vnvqgkLtl4BgYlYY-QllbaATa
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [giadunganhvan.vn]
 match = 70.8%%
@@ -47,14 +47,14 @@ title = CHIẾU ĐIỀU HÒA NỘI ĐỊA NANJIREN 11-18
 url = https://lybalansieucute.com/chieu-dieu-hoa-noi-dia-nanjiren-11-18
 
 [suongtuyet.com]
-match = -41.7%%
-title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
-url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
+match = 4.2%%
+title = có nên sử dụng chiếu điều hòa không?
+url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
 
 [www.lazada.vn]
-match = -50.0%%
-title = Chiếu điều hoà mát lạnh tặng kèm 2 bao gối 1.6 x 2. m , ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-mat-lanh-tang-kem-2-bao-goi-16-x-2-m-chieu-cao-su-tran-3-lop-mem-min-i2412274423.html?srsltid=AfmBOoqMTMHe_WyzwAwgA-ewnC8cU00h2W_eRsDkMsb--3V0QLwhVuNK
+match = -33.3%%
+title = Chiếu Mây Điều Hòa Hàng Xuất Khẩu Cao Cấp,Đủ kích cỡ
+url = https://www.lazada.vn/products/chieu-may-soi-nho-dieu-hoa-chieu-dieu-hoa-16-x-19m-chieu-may-dieu-hoa-hang-xuat-khau-cao-capdu-kich-co-chieu-du-lich-chieu-an-com-chieu-trai-giuong-i2106465649.html
 
 [ababy.com.vn]
 match = -4.2%%
@@ -89,7 +89,7 @@ url = https://xn--nekiovitnam-y69e.vn/bang-gia-chieu-may-dieu-hoa-2023/
 [vtvhyundai.vn]
 match = -37.5%%
 title = RUITON - Chiếu điều hoà 1m6 x 2m (Kèm 2 vỏ gối cao su)
-url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691?srsltid=AfmBOoor16TGH3oJGWwq745KPV9KNxPi2oFCG_45iNBj2Pl8DotMDyMm
+url = https://vtvhyundai.vn/shoppingMall/product/xa-khoruitonchieu-dieu-hoa-1m6x2m-kem-2-vo-goi-cao-su-.30008691
 
 [nemuytin.com]
 match = -41.7%%
@@ -99,7 +99,7 @@ url = https://nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
 [foreverbedding.net]
 match = 37.5%%
 title = Chiếu điều hòa - Forever Bedding
-url = https://foreverbedding.net/chieu-dieu-hoa?srsltid=AfmBOoonAhmsTqjKkZEgYpMiqD8nHaqzIzV7jC_ZgIOd1_hbTN3XYFqi
+url = https://foreverbedding.net/chieu-dieu-hoa
 
 [happynest.vn]
 match = -16.7%%
