--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-28 17:57:41
+lastsearch = 2024-07-28 20:11:22
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -22,8 +22,8 @@ title = chăn ga thắng lợi giá tốt Tháng 7, 2024 Chăn, Ga, Gối & ...
 url = https://shopee.vn/search?category=11036670&keyword=chăn ga thắng lợi&page=0&subcategory=11036683
 
 [congtynemthangloi.com]
-match = -52.0%%
-title = Review TOP ga giường Thắng Lợi được yêu thích nhất ...
+match = -72.0%%
+title = Review TOP ga giường Thắng Lợi được yêu thích nhất hiện nay
 url = https://congtynemthangloi.com/review-ga-giuong-thang-loi
 
 [nemtotgiare.com]
@@ -32,9 +32,9 @@ title = Bộ drap mền Thắng Lợi cotton cao cấp giá chỉ 700k
 url = https://nemtotgiare.com/san-pham/bo-drap-cotton-thang-loi-90.html
 
 [tiki.vn]
-match = -64.0%%
-title = Bộ chăn ra gối nệm thắng lợi hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=bộ chăn ra gối nệm thắng lợi
+match = -44.0%%
+title = Ga trải giường thắng lợi hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=ga trải giường thắng lợi
 
 [nemhana.com]
 match = -40.0%%
@@ -44,12 +44,12 @@ url = https://nemhana.com/ga-chun/
 [demxanh.com]
 match = 4.0%%
 title = Bộ ga chun Cotton chống thấm màu trắng
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-trang.html
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-trang.html?srsltid=AfmBOoo926-SUVzdN2aVBMqImBcIeMwF4i4EHhh-w5N0vTGykm6S7cnz
 
 [www.lazada.vn]
 match = 0.0%%
 title = TXVhIELhu5kgZ2EgZ2nGsOG7n...
-url = https://www.lazada.vn/ga-giuong/th-ng-l-i/
+url = https://www.lazada.vn/ga-giuong/th-ng-l-i/?srsltid=AfmBOop8mQTuST-2ug2YGXzDO1vEEhmxYbaBspBy4df1S8K6LS1pxppS
 
 [nemcaosuthangloi.vn]
 match = 4.0%%
