--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-07-28 17:27:53
+lastsearch = 2024-07-28 19:54:57
 
 [noithathomy.com]
 match = -42.9%%
@@ -17,14 +17,14 @@ title = Tặng Thảm Lau Chân - 100 Mẫu Thảm 2m x 3m Thảm Nỉ ...
 url = https://shopee.vn/Tặng-Thảm-Lau-Chân-100-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.22156385.4432151796
 
 [www.lazada.vn]
-match = -28.6%%
-title = Thảm trải sàn bali 2m x 3m mẫu mới 2023 ...
-url = https://www.lazada.vn/products/tham-trai-san-bali-2m-x-3m-mau-moi-2021-tham-trai-san-phong-khach-phong-ngu-sofa-phong-ban-tra-tham-lon-5d-chat-nhung-mau-co-dien-hoang-gia-i1129074592.html
+match = -42.9%%
+title = Thảm Trải Sàn Nhà 2m X 3m Giá Tốt T05/2024
+url = https://www.lazada.vn/tag/tham-trai-san-nha-2m-x-3m/
 
 [tiki.vn]
-match = -109.5%%
-title = Thảm trải sàn Sofa trang trí phòng khách Bali in 3D Nhung ...
-url = https://tiki.vn/tham-trai-san-sofa-trang-tri-phong-khach-bali-in-3d-nhung-ni-li-cao-cap-p104944051.html?spid=272166680
+match = -9.5%%
+title = Mua Thảm trải sàn Bali 2m*3m nhiều mẫu
+url = https://tiki.vn/thanh-ly-tham-trai-san-bali-2m-3m-gia-449k-nhieu-mau-p143200696.html
 
 [muachunghaiphong.com]
 match = 0.0%%
