--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-28 17:51:06
+lastsearch = 2024-07-28 20:06:16
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = -6.2%%
-title = Spencer Behr, MD
-url = https://profiles.ucsf.edu/spencer.behr
+match = 5.0%%
+title = Steve Braunstein, MD, PhD
+url = https://profiles.ucsf.edu/steve.braunstein
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -62,9 +62,9 @@ title = Exercise in patients with inflammatory bowel diseases
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
 
 [profiles.ucla.edu]
-match = 0.0%%
-title = Daniel H Geschwind
-url = https://profiles.ucla.edu/daniel.geschwind
+match = -6.7%%
+title = Steven C Cramer
+url = https://profiles.ucla.edu/steven.cramer
 
 [www.sec.gov]
 match = -20.0%%
