--- a/images/goi-vuong-dreamland-45x45/config.ini
+++ b/images/goi-vuong-dreamland-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-vuong-dreamland-45x45.html
 lastopen = 2024-06-06 16:45:16
 
 [search]
-lastsearch = 2024-07-28 16:44:14
+lastsearch = 2024-07-28 20:14:16
 
 [dreamland.vn]
 match = -64.0%%
@@ -14,7 +14,7 @@ url = http://dreamland.vn/Cotton-lua-PT08-i4052.html
 [demxanh.com]
 match = -24.0%%
 title = Chăn ga gối cưới Perfect 6 món màu đỏ P6M04
-url = https://demxanh.com/chan-ga-goi-cuoi-perfect-6-mon-mau-do-p6m04.html?srsltid=AfmBOoqsSTrGrf0rW6r9lUi-rUV2R6N1TxG6uvO-RBCtMm6klVQS3tUx
+url = https://demxanh.com/chan-ga-goi-cuoi-perfect-6-mon-mau-do-p6m04.html
 
 [www.diepxuan.com]
 match = 48.0%%
