--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-28 06:41:43
+lastsearch = 2024-07-28 20:45:47
 
 [erado.vn]
 match = 0.0%%
@@ -74,7 +74,7 @@ url = https://noithathofaco.net/san-pham/giuong-tu-ban-phan-nhap-khau-hfc-bgt-a0
 [everonvn.com.vn]
 match = -130.0%%
 title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường ...
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOoq5Ro8kdLQBxTo5eUJCNTOI30B2jOT_AgbXHiBkEUFi0uFV3ZVe
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [noithatdaithanh.vn]
 match = -35.0%%
