--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-07-28 15:48:45
+lastsearch = 2024-07-28 20:50:50
 
 [shopee.vn]
-match = -36.0%%
-title = Mùng chụp tự bung đỉnh vuông cao cấp khóa to mắt dày ...
-url = https://shopee.vn/Mùng-chụp-tự-bung-đỉnh-vuông-cao-cấp-khóa-to-mắt-dày-dặn-màn-chụp-xếp-gọn-nhiều-size-i.116277580.6522803157
+match = -12.0%%
+title = Màn chụp tự bung đỉnh vuông Kiều Phi - Mẫu mùng ...
+url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-Kiều-Phi-Mẫu-mùng-chụp-tự-bung-người-lớn-chống-muỗi-gấp-gọn-tiện-dụng-i.286850546.3461062779
 
 [munghoangphat.com]
-match = -36.0%%
-title = (3 CỬA) Mùng đỉnh vuông 1m4 x 2m cao cấp có viền chân
-url = https://munghoangphat.com/-3-cua-mung-dinh-vuong-1m4-x-2m-cao-cap-co-vien-chan.html
+match = 48.0%%
+title = màn chụp đỉnh vuông tự bung
+url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
 
 [www.mungbaobao.com]
 match = -28.0%%
@@ -67,9 +67,9 @@ title = Màn Chụp Tự Bung Đỉnh Vuông Cao Cấp -
 url = https://vinamartvn.com/mua/nha-cua-doi-song/man-chup-tu-bung-thong-minh-dinh-vuong-cao-cap/
 
 [www.youtube.com]
-match = -24.0%%
-title = Cách Gấp Màn Chụp Tự Bung Đỉnh Vuông Cực Nhanh, Dễ ...
-url = https://www.youtube.com/watch?v=KLTM17ZrMag
+match = -52.0%%
+title = Hướng Dẫn Gấp Màn Chụp Tự Bung - Cách Gấp Màn Chụp ...
+url = https://www.youtube.com/watch?v=AEddlekH6zA
 
 [demvip.vn]
 match = 52.0%%
