CI images update

--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-07-28 20:15:59
+lastsearch = 2024-07-28 21:14:18
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -19,7 +19,7 @@ url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 [demxanh.com]
 match = 27.9%%
 title = Đệm lò xo 1m8x2m (180x200cm) giá bao nhiêu?
-url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html?srsltid=AfmBOortqECno1dR-0VA-qrHerEHx18aKNjzrTb3qmkpd1HNqPun9syd
+url = https://demxanh.com/dem-lo-xo-1m8x2m-180x200cm-gia-bao-nhieu.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -34,7 +34,7 @@ url = https://everon.online/collections/dem-lo-xo-king-koil
 [www.diepxuan.com]
 match = 36.2%%
 title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
-url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html?srsltid=AfmBOoqdVU4ebDVd5Cfc7-_vpGLM9auiqxlKSdQ9RCd-3CGg5zmoNOrJ
+url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [www.everonqb.com]
 match = 57.4%%
