--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-28 17:34:53
+lastsearch = 2024-07-28 21:16:44
 
 [hoa18.com]
-match = -84.2%%
-title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
-url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
+match = -88.9%%
+title = Thông tin
+url = https://hoa18.com/category/thong-tin
 
 [www.youtube.com]
-match = -126.3%%
-title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
-url = https://www.youtube.com/watch?v=KAnEyj4H3PY
+match = -89.5%%
+title = Hoa Mộc Hương ta có cần cắt tỉa tạo tán không?
+url = https://www.youtube.com/watch?v=rDqH9asT7yA
 
 [kallos.co]
 match = -105.3%%
