--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-28 15:41:10
+lastsearch = 2024-07-28 21:18:25
 
 [helloviettravel.com]
 match = -181.2%%
@@ -87,9 +87,9 @@ title = Du lịch Mỹ khởi động lại sau 18 tháng đóng cửa
 url = https://lienbangtravel.com/vi/tin-tuc/258-du-lich-my-khoi-dong-lai-sau-18-thang-dong-cua
 
 [www.klook.com]
-match = -137.5%%
-title = 30 Khu Du Lịch Việt Nam Nổi Tiếng Bạn Đừng Bỏ Lỡ
-url = https://www.klook.com/vi/blog/khu-du-lich-o-viet-nam/
+match = -118.8%%
+title = 35 Địa Điểm Du Lịch Mỹ Hấp Dẫn Cho Kỳ Nghỉ Dài
+url = https://www.klook.com/vi/blog/dia-diem-du-lich-my/
 
 [dulichviet.com.vn]
 match = -181.2%%
