--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-28 19:56:40
+lastsearch = 2024-07-28 21:21:10
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -243.8%%
-title = Cô bé bỗng dưng ăn chay, thuộc làu kinh kệ và nói nhiều điều ...
-url = https://www.youtube.com/watch?v=89mA9A3sXUs
+match = -175.0%%
+title = Lắc Xúc Xắc Quá Nhiều, Tôi Nâng Cấp Con Vịt Này QUÁ ...
+url = https://www.youtube.com/watch?v=_iGnRB4o7ng
 
 [tuyensinh247.com]
 match = -218.8%%
