--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-07-28 14:36:01
+lastsearch = 2024-07-28 21:20:51
 
 [www.everonvn.vn]
-match = -34.5%%
-title = Ruột chăn gối Everon cao cấp & chính hãng, có khuyến ...
-url = https://www.everonvn.vn/san-pham/ruot-everon.html
+match = 68.0%%
+title = Ruột gối Everon Lite thấp
+url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-lite.html
 
 [happynest.vn]
 match = 3.4%%
