CI images update

--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-06-18 17:43:07
 lastsearch = 2024-07-28 21:21:52
 
 [changagoidemtamhao.com]
-match = -10.0%%
-title = Đệm PYEODA
-url = https://changagoidemtamhao.com/dem-pyeoda
+match = -5.0%%
+title = Bộ Chăn Ga Gối PYEODA LTT
+url = https://changagoidemtamhao.com/bo-chan-ga-goi-pyeoda-ltt
 
 [demsingapore.com]
 match = -70.0%%
