--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-28 20:44:44
+lastsearch = 2024-07-28 21:36:02
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -17,9 +17,9 @@ title = Yechan (xikers) - Kpop Wiki - Fandom
 url = https://kpop.fandom.com/wiki/Yechan_(xikers)
 
 [kprofiles.com]
-match = -76.5%%
-title = xikers Members Profile (Updated!)
-url = https://kprofiles.com/xikers-members-profile/
+match = -70.6%%
+title = ATEEZ Members Profile (Updated!)
+url = https://kprofiles.com/ateez-members-profile/
 
 [www.qsc.com]
 match = -188.2%%
@@ -34,7 +34,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWEO_o5d&sig=ACfU3U3dLJBsbIIYP_nEnnfIYG8xY696wg&hl=en&sa=X&ved=2ahUKEwjTweOT78mHAxWFFTQIHR2hKFAQ6AF6BAgaEAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWEO1p3c&sig=ACfU3U2utiwfpUWPwAGCCfx3HJNVkYWyfw&hl=en&sa=X&ved=2ahUKEwixndPP-smHAxUVD1kFHcePAAYQ6AF6BAgcEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -87,9 +87,9 @@ title = Sl.No. QUESTION
 url = https://swr.indianrailways.gov.in/uploads/files/1574064319246-GK-final.pdf
 
 [www.quora.com]
-match = -129.4%%
-title = Does KQ Entertainment treat their idols well?
-url = https://www.quora.com/Does-KQ-Entertainment-treat-their-idols-well
+match = -176.5%%
+title = How much do you know about each member of the Korean ...
+url = https://www.quora.com/How-much-do-you-know-about-each-member-of-the-Korean-band-Stray-Kids-What-are-their-interests-hobbies-outside-of-music-Are-they-close-friends-in-real-life-as-well
 
 [msaniimusicgroup.org]
 match = 0.0%%
