--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-28 20:00:24
+lastsearch = 2024-07-28 21:28:23
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -327,9 +327,9 @@ title = Việt Nam và ADB
 url = https://www.adb.org/vi/where-we-work/viet-nam
 
 [us.trip.com]
-match = -43.5%%
-title = Hotels near Tô Tượng Ánh Kim, Ho Chi Minh City
-url = https://us.trip.com/hotels/ho-chi-minh-city-t-tng-nh-kim/hotels-c301m50945149/
+match = -91.3%%
+title = Hotels near Công viên văn hóa Tân Thới Nhì, Ho Chi Minh City
+url = https://us.trip.com/hotels/ho-chi-minh-city-cng-vin-vn-ha-tn-thi-nh/hotels-c301m29192443/
 
 [en.tripadvisor.com.hk]
 match = -113.0%%
