--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-28 18:55:30
+lastsearch = 2024-07-28 21:42:48
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -175.0%%
-title = Lắc Xúc Xắc Quá Nhiều, Tôi Nâng Cấp Con Vịt Này QUÁ ...
-url = https://www.youtube.com/watch?v=_iGnRB4o7ng
+match = -243.8%%
+title = Thị trường cà phê trong nước và thế giới biến động trái chiều ...
+url = https://www.youtube.com/watch?v=0vPz1cnaTNM
 
 [hawater.com.vn]
 match = -75.0%%
@@ -645,4 +645,9 @@ url = https://giaophanlongxuyen.org/chuyen-muc/loi-chua-moi-ngay
 match = 25.0%%
 title = Chiếu Tuế - Chương 6
 url = https://metruyen.me/truyen/chieu-tue/chuong-6
+
+[bptv.vn]
+match = -256.2%%
+title = Vụ 'cô gái lây hiv cho 16 người': Xử phạt người đăng tin sai sự ...
+url = https://bptv.vn/video/539/24174/vu-co-gai-lay-hiv-cho-16-nguoi-xu-phat-nguoi-dang-tin-sai-su-that-shorts
 
