--- a/images/nem-lo-xo-techwood-16/config.ini
+++ b/images/nem-lo-xo-techwood-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-16.html
 lastopen = 2024-06-10 01:29:52
 
 [search]
-lastsearch = 2024-07-28 20:52:31
+lastsearch = 2024-07-28 21:44:10
 
 [sieuthidemonline.vn]
 match = -66.7%%
@@ -24,12 +24,12 @@ url = https://chuyenhangviet.com/dem-lo-xo-techwood/
 [demxanh.com]
 match = -95.2%%
 title = Bảng giá đệm lò xo Tuấn Anh khuyến mãi mới nhất năm ...
-url = https://demxanh.com/bang-gia-dem-lo-xo-tuan-anh-nam-2018.html
+url = https://demxanh.com/bang-gia-dem-lo-xo-tuan-anh-nam-2018.html?srsltid=AfmBOoo-3kcgnQ20e33RaCynLg1tJxNSg6kJM5Y7Exrazf8f-o_ZqfmZ
 
 [www.diepxuan.com]
 match = 4.8%%
 title = Nệm lò xo TechWood 160x200x23 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html
+url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html?srsltid=AfmBOoogRnBkukcoIWKSnGewzfdFd0EEswhSHuE6U5esRCvRNyuCgEa5
 
 [shopee.vn]
 match = -61.9%%
