--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-28 17:55:12
+lastsearch = 2024-07-28 21:31:11
 
 [www.lazada.vn]
 match = -111.1%%
 title = Nem Cua Bể Đặc Sản Hải Phòng khay 12 cái Thơm ngon
-url = https://www.lazada.vn/products/nem-cua-be-dac-san-hai-phong-khay-12-cai-thom-ngon-i1960185476.html
+url = https://www.lazada.vn/products/nem-cua-be-dac-san-hai-phong-khay-12-cai-thom-ngon-i1960185476.html?srsltid=AfmBOop-Fni_oFj7LqSef7ajSRL2mIFiYaiIKTofgy2YODkuw0VoeEXb
 
 [www.coastpneumatics.com]
 match = -116.7%%
@@ -17,14 +17,14 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -100.0%%
-title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
-url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
+match = -177.8%%
+title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
+url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
 
 [thegioinem.com]
-match = -105.6%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = -55.6%%
+title = Bảng giá nệm cao su Kim Cương mới 2024
+url = https://thegioinem.com/bang-gia-nem-cao-su-kim-cuong.html
 
 [www.facebook.com]
 match = -88.9%%
@@ -57,9 +57,9 @@ title = NEM Furniture JSC (@nemfurniturejsc)
 url = https://www.instagram.com/nemfurniturejsc/?hl=en
 
 [www.diepxuan.com]
-match = -55.6%%
-title = Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
+match = -111.1%%
+title = Điệp Xuân Nệm siêu nhẹ 9F 12 - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html?srsltid=AfmBOoqMNRxRZkrsnNVcc1jMRdeTf7VEA1fexd71J7_cclHtLOpVoIj7
 
 [nemphuoclong.vn]
 match = -83.3%%
