--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-07-28 18:56:53
+lastsearch = 2024-07-28 21:43:10
 
 [bilystore.vn]
-match = -81.0%%
-title = Thảm phòng ngủ NA14 - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-phong-ngu-na14/
+match = -95.2%%
+title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
+url = https://bilystore.vn/tham-trai-san-phong-ngu/
 
 [shopee.vn]
-match = -71.4%%
-title = Thảm nỉ màu trải giường 1m2 1m4 1m5 1m6 1m8 2m2- ...
-url = https://shopee.vn/Thảm-nỉ-màu-trải-giường-1m2-1m4-1m5-1m6-1m8-2m2-MÀU-T14-i.62311235.5150509394
+match = -52.4%%
+title = thảm trải giường giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải giường
 
 [tiki.vn]
 match = -38.1%%
