--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-07-28 17:59:03
+lastsearch = 2024-07-28 22:25:05
 
 [eva.vn]
-match = -131.6%%
-title = Cây này nở hoa bồng bềnh như mây, tỏa hương thơm ngát ...
-url = https://eva.vn/cay-canh-vuon/cay-nay-no-hoa-bong-benh-nhu-may-toa-huong-thom-ngat-trong-truoc-cua-se-hut-tai-loc-vao-nha-c283a587503.html
+match = -136.8%%
+title = Cây Mộc Hương - Ý nghĩa, cách trồng và chăm sóc cho cây ...
+url = https://eva.vn/cay-canh-vuon/cay-moc-huong-y-nghia-cach-trong-va-cham-soc-cho-cay-ra-hoa-dep-c283a460136.html
 
 [phunutoday.vn]
 match = -173.7%%
@@ -49,7 +49,7 @@ url = https://books.google.com/books?id=oC8iDAAAQBAJ&pg=PA325&lpg=PA325&dq=chieu
 [www.diepxuan.com]
 match = 5.3%%
 title = Chiếu cây mộc hoa 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html?srsltid=AfmBOoq2OS4JTRJfvOR8NG8ghfQZTKm6T_uUSdekvkuUPm6_vXYCGSeR
+url = https://www.diepxuan.com/chieu-cay-moc-hoa-160x200.html
 
 [mietistudio.com]
 match = -131.6%%
@@ -67,14 +67,14 @@ title = Cây cảnh như máy hút khói, khử mùi, trồng trong nhà ...
 url = https://danviet.vn/cay-canh-nhu-may-hut-khoi-khu-mui-trong-trong-nha-khong-khi-sach-bong-con-chieu-may-ruoc-loc-20240704031213471.htm
 
 [www.vinmec.com]
-match = -15.8%%
-title = Cây dành dành có tác dụng gì?
-url = https://www.vinmec.com/vie/bai-viet/cay-danh-danh-co-tac-dung-gi-vi/
+match = -78.9%%
+title = Tác dụng của cây đại tướng quân với sức khỏe
+url = https://www.vinmec.com/vie/bai-viet/tac-dung-cua-cay-dai-tuong-quan-voi-suc-khoe-vi
 
 [www.youtube.com]
-match = -136.8%%
-title = SH.8771. Lần đầu tiên thấy cây Mộc Hương bonsai dáng đẹp ...
-url = https://www.youtube.com/watch?v=It91wsH0t3U
+match = -89.5%%
+title = Cách đơn giản để cây mộc hương của bạn nở nhiều hoa
+url = https://www.youtube.com/watch?v=VQ9o9tAU0jk
 
 [trungquang.com]
 match = 0.0%%
