--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-28 12:26:56
+lastsearch = 2024-07-28 22:26:13
 
 [tiki.vn]
 match = 16.0%%
@@ -17,9 +17,9 @@ title = Cách Xem Lịch Chiếu Film Tại Taiwan
 url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
 
 [shopee.vn]
-match = -28.0%%
-title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
-url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
+match = -8.0%%
+title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
+url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
 
 [congly.vn]
 match = 0.0%%
@@ -42,14 +42,14 @@ title = Văn Phòng Kinh Tế và Văn Hóa Đài Bắc tại TP. Hồ Chí Minh
 url = https://www.roc-taiwan.org/vnsgn_vi/index.html
 
 [books.google.com]
-match = -96.0%%
-title = Tạp chí cộng sản: cơ quan lý luận và chính trị của Đảng cộng ...
-url = https://books.google.com/books?id=vqdQAQAAIAAJ&pg=RA6-PA12&lpg=RA6-PA12&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=KcLsH1xQ0c&sig=ACfU3U2bcFPhSvOHfMBYpjI57anDaP5dtw&hl=en&sa=X&ved=2ahUKEwivlbnx_8iHAxUFEFkFHe_TDwcQ6AF6BAgXEAM
+match = -44.0%%
+title = Chiến sĩ Cộng Hòa - Page 12 - Google Books Result
+url = https://books.google.com/books?id=X2clAAAAMAAJ&pg=PA12&lpg=PA12&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=p30RRL3XPt&sig=ACfU3U2cMbuWl44sF3-qzrJskkgTFIAUKw&hl=en&sa=X&ved=2ahUKEwjCuKzrhcqHAxV5weYEHQUzFS4Q6AF6BAgZEAM
 
 [www.skyscanner.com.vn]
-match = -52.0%%
-title = Vé máy bay giá rẻ từ Taipei Taiwan Taoyuan đến Đà Nẵng
-url = https://www.skyscanner.com.vn/routes/tpe/dad/taipei-taiwan-taoyuan-to-đa-nang.html
+match = -60.0%%
+title = Vé máy bay giá rẻ từ Đài Bắc đến Hoa Kỳ - Skyscanner
+url = https://www.skyscanner.com.vn/routes/tpet/us/đai-bac-to-hoa-ky.html
 
 [www.bestprice.vn]
 match = -80.0%%
