--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-28 21:21:10
+lastsearch = 2024-07-28 22:26:37
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -33,8 +33,8 @@ url = https://www.youtube.com/watch?v=_iGnRB4o7ng
 
 [tuyensinh247.com]
 match = -218.8%%
-title = Con lắc lò xo có vật nặng khối lượng m = 100g, chiều dài ...
-url = https://tuyensinh247.com/bai-tap-62416.html
+title = Một con lắc đơn gồm vật nhỏ có khối lượng 50g và sợi dây ...
+url = https://tuyensinh247.com/bai-tap-616975.html
 
 [asisov.org.vn]
 match = -125.0%%
@@ -227,9 +227,9 @@ title = chelsea vs🍯 【WW88.game】Casino Online Châu Á
 url = https://hoanghaco.com.vn/ios/farmer_pyramid_summer/
 
 [www.facebook.com]
-match = -156.2%%
-title = Yamaha XSR Vietnam | [Góc chia sẻ] Chiều cao XSR155
-url = https://www.facebook.com/groups/xsrvietnam/posts/góc-chia-sẻ-chiều-cao-xsr155cảnh-báo-bài-dàicó-một-chủ-đề-mà-mình-thấy-từ-khi-gr/1025188414875036/
+match = -200.0%%
+title = Review phim chiếu rạp | K xem các phần trước có giểu dc ...
+url = https://www.facebook.com/groups/khenphim/posts/k-xem-các-phần-trước-có-giểu-dc-nội-dung-phim-này-k-mng-mình-xin-rv-phim-có-hay-/1779205792553570/
 
 [baocaobang.vn]
 match = -218.8%%
