--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-28 17:34:13
+lastsearch = 2024-07-28 22:19:10
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -27,9 +27,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [chieutrelanlan.com]
-match = -114.3%%
-title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
-url = https://chieutrelanlan.com/
+match = -19.0%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html
 
 [www.youtube.com]
 match = -147.6%%
@@ -507,9 +507,9 @@ title = Tiếp tục đưa ra các chính sách phù hợp cho phát triển ...
 url = https://stockbiz.vn/tin-tuc/tiep-tuc-dua-ra-cac-chinh-sach-phu-hop-cho-phat-trien-nang-luong-tai-tao/26795321
 
 [vietbao.com]
-match = -66.7%%
-title = Yêu Thương Làm Não Bộ Khỏe Mạnh Và Sống Thọ
-url = https://vietbao.com/a319517/yeu-thuong-lam-nao-bo-khoe-manh-va-song-tho
+match = -119.0%%
+title = Mưa Tiền: Ban tranh cử Harris quyên được 200 triệu USD ...
+url = https://vietbao.com/a319650/m
 
 [caobangtv.vn]
 match = -95.2%%
