--- a/images/ruot-chan-hoi-warmdream-200x220/config.ini
+++ b/images/ruot-chan-hoi-warmdream-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-chan-hoi-warmdream-200x220.html
 lastopen = 2024-06-07 01:01:31
 
 [search]
-lastsearch = 2024-07-28 21:12:18
+lastsearch = 2024-07-28 22:24:06
 
 [www.dreamland.vn]
 match = 20.8%%
@@ -24,7 +24,7 @@ url = https://www.diepxuan.com/ruot-chan-hoi-warmdream-200x220.html
 [vuanem.com]
 match = -25.8%%
 title = Ruột Chăn Mền Cao Cấp, Chăn Bông Chính Hãng Giá Rẻ ...
-url = https://vuanem.com/chan-ga-goi/ruot-chan?srsltid=AfmBOoruA-3yt2XuZYZhc3gMdvfhH3Sq3EhkgM-NVaYsIBHk0qKnX7cC
+url = https://vuanem.com/chan-ga-goi/ruot-chan
 
 [www.instagram.com]
 match = -45.2%%
