CI images update

--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-28 20:26:54
+lastsearch = 2024-07-28 22:37:45
 
 [zhangbrickshop.com]
 match = -133.3
@@ -364,7 +364,7 @@ url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/
 [vattumientay.com]
 match = -166.7%%
 title = Phe Gài Trục Thép D210 DIN 471 | vattumientay.com
-url = https://vattumientay.com/phe-gai-truc-thep-d210-din-471.p-5424.html?srsltid=AfmBOopE3ISPmJvv14Wv7wmqGx3agu3GnQwzhbt6nuynWORJCrWb1koJ
+url = https://vattumientay.com/phe-gai-truc-thep-d210-din-471.p-5424.html
 
 [mn-pvinh.tphue.thuathienhue.edu.vn]
 match = -126.7%%
