--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-07-28 19:55:39
+lastsearch = 2024-07-28 22:29:52
 
 [suongtuyet.com]
-match = -36.0%%
-title = Nệm Bông Ép Tuấn Anh Korea Vải Valize - Đà Nẵng
-url = https://suongtuyet.com/nem-bong-ep-tuan-anh-seong-san-vai-gam
+match = 16.0%%
+title = Nệm Bông Ép Tuấn Anh Korea Cotton
+url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
 
 [tuananh.vn]
 match = 8.0%%
@@ -19,7 +19,7 @@ url = https://tuananh.vn/dem-bong-ep-korea-kaki-p112.html
 [demxanh.com]
 match = -48.0%%
 title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html?srsltid=AfmBOopiyK8ffBKcuP9tEEmOJdplJN68MP7scDYeH73eGgqx8ixhgbjN
 
 [shopee.vn]
 match = 43.5%%
@@ -49,7 +49,7 @@ url = https://dem24h.vn/dem-bong-ep-korea-vai-cotton
 [demviethome.vn]
 match = -4.0%%
 title = Đệm Bông Ép Tuấn Anh 3 Mảnh Korea Gấm
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/?srsltid=AfmBOooiRaSHomKHowIINLJmKPO6qcLLmw-lfXsIsMCf4EBuduxRDWzM
 
 [bedding.vn]
 match = -76.0%%
