--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-07-28 14:40:55
+lastsearch = 2024-07-28 22:37:07
 
 [www.youtube.com]
 match = -40.7%%
@@ -37,19 +37,19 @@ title = Kinh hoàng ruột gối siêu rẻ đen ngòm
 url = https://eva.vn/mua-sam-gia-ca/kinh-hoang-ruot-goi-sieu-re-den-ngom-c2a127941.html
 
 [shopee.vn]
-match = -55.6%%
-title = Chăn ga gối đệm cưới - Giá Tốt, Miễn Phí Vận Chuyển, Đủ ...
-url = https://shopee.vn/list/chăn ga gối/đệm cưới
+match = -22.2%%
+title = vỏ gối hello kitty giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=vỏ gối hello kitty&urlold=vo-goi-om-xoa-nhung-hello-kitty-no/6152316541839545337/343220106741734172/ 
 
 [demxanh.com]
-match = -74.1%%
-title = [Mẹo vặt] Cách làm phồng ruột gối tại nhà đơn giản, hiệu quả
-url = https://demxanh.com/cach-lam-phong-ruot-goi.html
+match = -44.4%%
+title = Chăn ga gối Olympia chính hãng giá rẻ nhất thị trường
+url = https://demxanh.com/chan-ga-goi-olympia.html
 
 [www.thegioididong.com]
-match = -51.9%%
-title = Cách chặn, bỏ chặn người dùng trên TikTok cực nhanh ...
-url = https://www.thegioididong.com/game-app/cach-chan-nguoi-dung-tren-tiktok-de-dang-nhat-1253934
+match = -48.1%%
+title = Cách mở chặn, bỏ chặn cuộc gọi đi trên điện thoại ...
+url = https://www.thegioididong.com/hoi-dap/cau-hoi-882159
 
 [dienmaycholon.vn]
 match = -44.4%%
