--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-28 21:13:18
+lastsearch = 2024-07-28 22:36:04
 
 [vinatools.com]
-match = -206.7%%
-title = Kéo cắt thép tấm BESSEY D216-280, thẳng bo trái - phải
-url = https://vinatools.com/keo-cat-ton-d216-sbsk/
+match = -140.0%%
+title = Kéo cắt tôn dày 1.0mm kiểu dáng cổ điển Bessey
+url = https://vinatools.com/keo-cat-ton-d-216-116/
 
 [www.vietnamairport.vn]
 match = -213.3%%
@@ -87,8 +87,8 @@ title = Instagram
 url = https://www.instagram.com/p/CpwSVeuPb9W/
 
 [play.google.com]
-match = -140.0%%
-title = sesame: 16 Dufour's Place - Ứng dụng trên ...
+match = -193.3%%
+title = sesame: 16 Dufour's Place - Ứng dụng trên Google Play
 url = https://play.google.com/store/apps/details?id=dufoursplace.smartspaces.d2i.co&hl=vi
 
 [dochoibacha.vn]
