--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-28 20:50:30
+lastsearch = 2024-07-28 22:34:22
 
 [burningman.org]
 match = -60.0%%
@@ -127,8 +127,8 @@ title =
 url = https://www.quora.com/How-can-we-verify-if-someone-is-in-jail-What-methods-or-websites-can-be-used-to-confirm-their-incarceration
 
 [register.fca.org.uk]
-match = -6.7%%
-title = Register Home Page
+match = -18.2%%
+title = NewRegister
 url = https://register.fca.org.uk/s/
 
 [www.manutd.com]
@@ -1110,4 +1110,9 @@ url = https://www.kcmo.gov/
 match = -200.0%%
 title = Milwaukee News, Weather and Sports - Wisconsin News ...
 url = https://www.wisn.com/
+
+[www.fca.org.uk]
+match = 0.0%%
+title = 
+url = https://www.fca.org.uk/firms/authorisation/consumer-investments
 
