--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-07-28 19:58:02
+lastsearch = 2024-07-28 22:36:25
 
 [www.thanhthuyhanh.com]
 match = -50.0%%
@@ -14,7 +14,7 @@ url = https://www.thanhthuyhanh.com/products/ruot-goi-nam-dream-zone
 [ninhouse.vn]
 match = -171.4%%
 title = Ruột gối nằm giá rẻ NIN House chính hãng tại Tphcm
-url = https://ninhouse.vn/collections/ruot-goi-1
+url = https://ninhouse.vn/collections/ruot-goi-1?srsltid=AfmBOoqMg98zAYWd8Q5EnB1Tns9n0OGxrWxz0e3WC45uHc5A9zeoO5Lh
 
 [elambo.vn]
 match = -142.9%%
@@ -34,7 +34,7 @@ url = https://changagoidemsonghong.online/ruot-goi-song-hong.html
 [demxanh.com]
 match = -150.0%%
 title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html
+url = https://demxanh.com/ruot-goi.html?srsltid=AfmBOorOyMHHhAY_D1aQiRP1aAByGNxbkiWW4Pp4a--R42S070Tm8DyM
 
 [www.diepxuan.com]
 match = -100.0%%
@@ -59,7 +59,7 @@ url = https://songhonghanoi.vn/bang-gia-vo-goi-ruot-goi-song-hong-moi-nhat-2021.
 [jysk.vn]
 match = -164.3%%
 title = Ruột Chăn, Ruột Gối Ngủ Cao Cấp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/ruot-chan-goi
+url = https://jysk.vn/ruot-chan-goi?srsltid=AfmBOooEPoDmS6jug3irvwtKY1C1Ms95j05jdSQDx_E-4mgbBPprEEez
 
 [everonvn.com.vn]
 match = -164.3%%
